--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-03 19:24:49
+lastsearch = 2024-08-03 23:35:19
 
 [demxanh.com]
-match = 18.2%%
-title = Thảm trải giường lông cừu TLC 04
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOorlWwovAj-VamWUHKymyg_abL5a8ghGTVjukYtG0kUCl3y8uWtF
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 4
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
+title = Thảm ghế thảm giường - Trang 5
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [thegioidemonline.vn]
 match = -109.1%%
@@ -27,13 +27,13 @@ title = Tìm Hiểu Kích Thước Giường Ngủ Các Loại
 url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 
 [ru9.vn]
-match = -86.4%%
-title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+match = -90.9%%
+title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOoo95z5ee32brRudtua4PFz4XgnDIyy8dNNGZpENBdlXi_kDqhKL
 
 [cafeland.vn]
-match = -45.5%%
-title = Kích thước giường ngủ chuẩn theo phong thủy
+match = -109.1%%
+title = Kích thước giường ngủ chuẩn theo phong thủy - CafeLand.Vn
 url = https://cafeland.vn/xu-huong/kich-thuoc-giuong-ngu-chuan-theo-phong-thuy-91091.html
 
 [www.diepxuan.com]
@@ -79,7 +79,7 @@ url = https://suongtuyet.com/nem-lo-xo-kim-cuong-divan-asling
 [vikicare.com]
 match = 13.6%%
 title = thảm đá nhiệt nóng - Vikicare
-url = https://vikicare.com/product-tag/tham-da-nhiet-nong/
+url = https://vikicare.com/product-tag/tham-da-nhiet-nong/?srsltid=AfmBOorp431XJAFIACRR6Bklq3iGO3OrWxH2K-mgzf-cUoFx-jzivHgX
 
 [www.linkedin.com]
 match = -86.4%%
