--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-03 21:55:26
+lastsearch = 2024-08-03 23:35:38
 
 [tiki.vn]
 match = 16.0%%
@@ -12,9 +12,9 @@ title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
 url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=58961412
 
 [www.tiktok.com]
-match = 4.0%%
-title = Phim Mai Có Chiếu Ở Taiwan Không
-url = https://www.tiktok.com/discover/phim-mai-có-chiếu-ở-taiwan-không?lang=en
+match = -80.0%%
+title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Loan ...
+url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
 
 [shopee.vn]
 match = -28.0%%
@@ -47,9 +47,9 @@ title = Tuyển chọn đề thi bồi dưỡng học sinh giỏi toán 6 ( chư
 url = https://books.google.com/books?id=7f76EAAAQBAJ&pg=RA1-PA7&lpg=RA1-PA7&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=ZyXRncfFyb&sig=ACfU3U3ZoZ9TpHCjism4vnzbzoUchhqnBg&hl=en&sa=X&ved=2ahUKEwiQtebiv9eHAxWOEVkFHTUFCDIQ6AF6BAg6EAM
 
 [www.skyscanner.com.vn]
-match = -60.0%%
-title = Vé máy bay giá rẻ từ Đài Bắc đến Hoa Kỳ - Skyscanner
-url = https://www.skyscanner.com.vn/routes/tpet/us/đai-bac-to-hoa-ky.html
+match = -48.0%%
+title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Hà Nội
+url = https://www.skyscanner.com.vn/routes/tpe/han/taipei-taiwan-taoyuan-to-ha-noi.html
 
 [www.bestprice.vn]
 match = -80.0%%
