CI images update

--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-03 22:15:19
+lastsearch = 2024-08-03 23:57:57
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -112,8 +112,8 @@ title = Bánh xe đu quay sáng tạo chuyển động vĩnh cửu con lắc ...
 url = https://tiki.vn/banh-xe-du-quay-sang-tao-chuyen-dong-vinh-cuu-con-lac-newton-p168229177.html
 
 [vishipel.com.vn]
-match = -226.7%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
+match = -260.0%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
 [www.victoriavn.com]
@@ -440,4 +440,9 @@ url = https://baobacgiang.vn/13-diem-moi-cua-luat-trat-tu-an-toan-giao-thong-duo
 match = -226.7%%
 title = Trực tiếp Magic United TFA vs North Lakes vào lúc 13:00 ...
 url = https://xoilaczvu.tv/truc-tiep/magic-united-tfa-vs-north-lakes-luc-1400-ngay-03-08-2024/
+
+[journal.vnuf.edu.vn]
+match = -193.3%%
+title = phân lập, tuyển chọn chủng vi khuẩn chịu nhiệt độ cao
+url = https://journal.vnuf.edu.vn/vi/article/download/966/872/1740
 
