--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-08-03 19:25:27
+lastsearch = 2024-08-03 23:58:41
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -32,9 +32,9 @@ title = Ruột gối Sông hồng khuyến mại giá rẻ nhất Hà Nội
 url = https://changagoidemsonghong.online/ruot-chan-ruot-goi-song-hong.html
 
 [demxanh.com]
-match = -150.0%%
-title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html
+match = -207.1%%
+title = Ưu điểm của ruột gối? Loại ruột gối nào tốt để sử dụng?
+url = https://demxanh.com/uu-diem-cua-ruot-goi-loai-ruot-goi-nao-tot-de-su-dung.html
 
 [www.diepxuan.com]
 match = -100.0%%
@@ -72,9 +72,9 @@ title = Ruột gối Sông Hồng chính hãng giá rẻ nhất thị trường 
 url = https://demsonghonghanoi.com/ruot-goi-song-hong/
 
 [shopee.vn]
-match = -121.4%%
-title = ruột gối giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=ruột gối
+match = -7.1%%
+title = (Giá Rẻ)Ruột gối Bông gòn
+url = https://shopee.vn/(Giá-Rẻ)Ruột-gối-Bông-gòn-i.103406830.3818502984
 
 [www.changagoidemeveron.vn]
 match = -78.6%%
