--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-03 15:35:06
+lastsearch = 2024-08-04 00:01:12
 
 [www.diepxuan.com]
 match = -20.0%%
@@ -29,7 +29,7 @@ url = https://daros.com.vn/ht-15.html
 [htguitarcenter.vn]
 match = -26.7%%
 title = Guitar Trần Acoustic THD-15
-url = http://htguitarcenter.vn/san-pham/guitar-acoustic-thd-15/
+url = https://htguitarcenter.vn/san-pham/guitar-acoustic-thd-15/
 
 [www.htlightlevel.vn]
 match = -200.0%%
