--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-03 22:46:42
+lastsearch = 2024-08-03 23:47:27
 
 [eva.vn]
 match = -163.2%%
@@ -87,9 +87,9 @@ title = Cây lá bỏng thần kỳ "mọc" ra hoa hồng xanh mướt
 url = https://kenh14.vn/cay-la-bong-than-ky-moc-ra-hoa-hong-xanh-muot-20170424194942725.chn
 
 [saigonhoa.com]
-match = -68.4%%
-title = Mẹo để cây mai chiếu thủy nở rộ vào dịp Tết
-url = https://saigonhoa.com/meo-de-cay-mai-chieu-thuy-no-ro-vao-dip-tet/
+match = -89.5%%
+title = 17 cây bóng mát khuyến khích trồng đường phố
+url = https://saigonhoa.com/17-cay-bong-mat-khuyen-khich-trong-duong-pho/
 
 [nongthonviet.com.vn]
 match = -94.7%%
@@ -182,8 +182,8 @@ title = Về Mộc Hóa ngắm bông súng, xem đan chiếu bàng
 url = https://www.phunuonline.com.vn/ve-moc-hoa-ngam-bong-sung-xem-dan-chieu-bang-a1454161.html
 
 [hoamoclan.org]
-match = -57.9%%
-title = Hướng dẫn cách trồng, chăm sóc hoa mộc lan
+match = -147.4%%
+title = Cây giống hoa mộc lan – Hướng dẫn cách trồng, chăm sóc ...
 url = https://hoamoclan.org/
 
 [www.webtretho.com]
