--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-08-03 17:39:10
+lastsearch = 2024-08-03 23:52:52
 
 [shopee.vn]
 match = 35.3%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = 38.2%%
 title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html?srsltid=AfmBOoroxak0DUylAvHJfWB2XQR_ZmIEnolsx226xUp6PF1QxjYMP-JU
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
 
 [giadunganhvan.vn]
 match = 48.0%%
