--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-08-03 14:24:13
+lastsearch = 2024-08-03 23:56:09
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -34,7 +34,7 @@ url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 [www.lazada.vn]
 match = 25.0%%
 title = Mùng Tự Bung đỉnh Vuông Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
+url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/?srsltid=AfmBOorpscfd9b-FQqLz3JJD9Lp28g3NIhmncKdEv6dmw7XNx75Vm0HW
 
 [munghoangphat.com]
 match = -33.3%%
