--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-03 17:27:38
+lastsearch = 2024-08-03 23:52:08
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 180x200
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
+match = 45.5%%
+title = Thảm giường II 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+title = Thảm trải giường cao su non màu xanh ngọc
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -37,9 +37,9 @@ title = Giường MDF 1.8x2m có 2 ngăn kéo
 url = https://noithatthuynguyet.com/giuong-mdf-1-8x2m-co-2-ngan-keo/
 
 [tiki.vn]
-match = 0.0%%
-title = Mua Drap giường chống thấm 180 x 200 cm
-url = https://tiki.vn/drap-giuong-chong-tham-180-x-200-cm-p139192110.html
+match = -36.4%%
+title = Thảm trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải giường
 
 [gusofa.vn]
 match = -81.8%%
@@ -62,9 +62,9 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
-match = -72.7%%
-title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
-url = https://jysk.vn/kich-thuoc-giuong-ngu
+match = -68.2%%
+title = Mattress 180x200 GOLD S95 DREAMZONE - JYSK
+url = https://jysk.vn/en-US/spring-mattress-dreamzone-s95-r180xd200xc28cm
 
 [decosy.com]
 match = -50.0%%
@@ -102,9 +102,9 @@ title = Eksternt link - Filskov Friskole
 url = https://filskovfriskole.skoleporten.dk/sp/298936/iframe?address=http://xn--e1aaa3bd0cza.xn--p1ai/95DwMiUfe43v
 
 [tonybed.com]
-match = -4.5%%
-title = Bộ Drap Ga Trải Giường Modal - 21
-url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-21/
+match = -40.0%%
+title = Đầu giường
+url = https://tonybed.com/dau-giuong/
 
 [covacu.com]
 match = 28.6%%
