CI images update

--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-03 23:54:19
+lastsearch = 2024-08-04 00:17:15
 
 [www.chieulongdinh.com.vn]
 match = -187.5%%
@@ -94,7 +94,7 @@ url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 [books.google.com]
 match = -212.5%%
 title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+10&source=bl&ots=LZu7XPcxWf&sig=ACfU3U2117MeMIPAZCl73LVbIQZS3TobjQ&hl=en&sa=X&ved=2ahUKEwio5KzcpNmHAxUfFlkFHTRZMWQQ6AF6BAgkEAM
+url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+10&source=bl&ots=LZu7XPdBTl&sig=ACfU3U28Q7dZ1Pcb0Hc1rXqtdAfTZuh2Lw&hl=en&sa=X&ved=2ahUKEwjLxbjsqdmHAxV3DTQIHZG8C84Q6AF6BAgnEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
