--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-03 13:24:17
+lastsearch = 2024-08-04 00:18:37
 
 [everon.com.vn]
 match = 14.8%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Everon EPM 22063
 url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = 18.9%%
-title = Bộ Chăn Ga Gối Everon SR04 Chính Hãng
-url = https://everon.online/products/bo-everon-sr04
+match = -5.0%%
+title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
+url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 16.7%%
-title = BỘ CHĂN GA GỐI SẮC HẠ ESC23002
-url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/
+match = 29.7%%
+title = BỘ CHĂN GA GỐI GIẤC MƠ MÂY - ESJ24030
+url = https://www.everonvni.vn/bo-chan-ga-goi-giac-mo-may-esj24030/
 
 [everonhanquoc.vn]
 match = 19.4%%
