--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-08-03 22:43:13
+lastsearch = 2024-08-04 00:21:44
 
 [shopee.vn]
-match = -90.9%%
-title = Chiếu cói 2.2m x 2m chuẩn xịn chiếu cói thái bình chính hiệu
-url = https://shopee.vn/Chiếu-cói-2.2m-x-2m-chuẩn-xịn-chiếu-cói-thái-bình-chính-hiệu-i.18845103.7735992407
+match = -104.5%%
+title = (kích thước lớn, Giá sỉ) Chiếu nhựa gấp gọn cao cấp 2m ...
+url = https://shopee.vn/(kích-thước-lớn-Giá-sỉ)-Chiếu-nhựa-gấp-gọn-cao-cấp-2m-3m-4m-i.98572225.23343768889
 
 [www.facebook.com]
 match = 36.4%%
@@ -24,7 +24,7 @@ url = https://m.facebook.com/61553157173242/
 [www.lazada.vn]
 match = -86.4%%
 title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html?srsltid=AfmBOoplN4CAY6RqFvNdNY6Zzd1u1OM_82bNsCm71DEEFXwcvgCnTkzK
 
 [tiki.vn]
 match = -86.4%%
@@ -39,7 +39,7 @@ url = https://www.auto365thaibinh.vn/
 [proauto.vn]
 match = -77.3%%
 title = Dán Phim Cách Nhiệt 3M Thái Bình Cho Xe Hơi Chính Hãng
-url = https://proauto.vn/dan-phim-cach-nhiet-3m-thai-binh-cho-xe-hoi-chinh-hang.html
+url = https://proauto.vn/dan-phim-cach-nhiet-3m-thai-binh-cho-xe-hoi-chinh-hang.html?srsltid=AfmBOoqkcaxe1O6mYj1MjXdEw2yOVYnOO68v74LhgWHfVdJpkOopmrWY
 
 [auto365thaibinh.vn]
 match = -27.3%%
