--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-08-03 22:44:33
+lastsearch = 2024-08-04 00:24:31
 
 [demdreamland.vn]
 match = 25.6%%
@@ -12,9 +12,9 @@ title = Đệm cao su nhập khẩu Dreamland Natural Latex
 url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 
 [demxanh.com]
-match = 46.5%%
-title = Đệm cao su Dreamland Natural Latex chính hãng
-url = https://demxanh.com/dem-cao-su-dreamland-natural-latex.html?srsltid=AfmBOopg0_5T2RvRkVburGh7ogFf3Wzh42VCK9w3lFA3WqQudggiuSF_
+match = 18.6%%
+title = Đệm cao su Kim Cương xuất khẩu Diamond Massage trắng
+url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-happy-massage.html
 
 [www.diepxuan.com]
 match = -277.8%%
@@ -29,12 +29,12 @@ url = http://dreamland.vn/Dem-cao-su-Thien-Nhien-Hoang-Gia---16cm-i4417.html
 [demviethome.vn]
 match = 7.0%%
 title = Đệm cao su Kim Cương princess diamond luxury giá rẻ hà ...
-url = https://demviethome.vn/dem-cao-su-kim-cuong-princess-diamond-luxury/?srsltid=AfmBOoph5Z64Gtjw_1ARJBga8M7BeyCGApnTOnVAfY1Vo2jBseJT9YGx
+url = https://demviethome.vn/dem-cao-su-kim-cuong-princess-diamond-luxury/
 
 [thegioidemdep.com]
-match = 7.0%%
-title = Mua Nệm cao su kim cương Princess Gold Cao Cấp Sale ...
-url = https://thegioidemdep.com/dem-cao-su-thien-nhien-kim-cuong-xuat-khau-princess-gold/
+match = -4.7%%
+title = Bảng Giá & Top 50+ Đệm bông ép Dreamland chính hãng ...
+url = https://thegioidemdep.com/dem-bong-ep-dreamland/
 
 [chandemsadora.com]
 match = -9.7%%
