--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-03 14:28:24
+lastsearch = 2024-08-04 00:28:03
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -23,13 +23,13 @@ url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearin
 
 [profiles.ucsf.edu]
 match = 5.3%%
-title = Katherine Matthay, MD
-url = https://profiles.ucsf.edu/katherine.matthay
+title = Margaret Tempero, MD
+url = https://profiles.ucsf.edu/margaret.tempero
 
 [www.ncbi.nlm.nih.gov]
-match = -168.4%%
-title = An integrative review of physical activity in adults with ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8831770/
+match = -73.7%%
+title = Long-term complications of COVID-19 - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8721906/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -10.5%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -21.4%%
+title = Kathleen Fisch
+url = https://profiles.ucsd.edu/kathleen.fisch
 
 [medboard.nv.gov]
 match = -136.8%%
@@ -72,9 +72,9 @@ title = Politics, Policy, Political News - POLITICO
 url = https://www.politico.com/
 
 [som.cuanschutz.edu]
-match = -163.2%%
-title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
+match = -126.3%%
+title = Tell Bennett, MD Professor, Biomedical Informatics
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/22381
 
 [cpr.heart.org]
 match = -94.7%%
