CI images update

--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-03 22:34:39
+lastsearch = 2024-08-04 00:41:54
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -38.1%%
 title = A Dictionary of Music and Musicians
-url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8EkPQ_vg&sig=ACfU3U1COQoafMMGFKb4-mlhL5MDQVd_Yw&hl=en&sa=X&ved=2ahUKEwjJ5dz0ktmHAxX7GlkFHZ4SLAEQ6AF6BAg6EAM
+url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8ElGN5pc&sig=ACfU3U1dPt6yrzfOsIYI3GNAXoojrPRBqg&hl=en&sa=X&ved=2ahUKEwiI-9etr9mHAxVakokEHSm8FIcQ6AF6BAgsEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -66.7%%
-title = NEM Dubrovnik 2025 Dates Announced Following ...
-url = https://www.formatbiz.it/dettNews.aspx?id=11677
+match = -100.0%%
+title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
+url = https://www.formatbiz.it/dettNews.aspx?id=9944
 
 [yro.slashdot.org]
 match = -114.3%%
