--- a/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
+++ b/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
@@ -34,7 +34,7 @@ url = https://sieuthimuare.com/bo-chan-ga-goi-phi-lua-chan-chan/
 [vuanem.com]
 match = -2.8%%
 title = Top 15 mẫu drap giường phi lụa được yêu thích nhất
-url = https://vuanem.com/blog/mau-drap-giuong-phi-lua.html
+url = https://vuanem.com/blog/mau-drap-giuong-phi-lua.html?srsltid=AfmBOorl5K9ro1MpdU_HMO-XH5rVFeVMWnabsagj_DA4brPsvYkagb6F
 
 [diepxuan.com]
 match = 17.1%%
