--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-03 21:27:35
+lastsearch = 2024-08-04 00:41:09
 
 [demxanh.com]
-match = 34.5%%
-title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOopu7iqEq33awX20_PJXz2OseR8jYXc_tXcK1rV-ROAU8UcYv0Xl
+match = 0.0%%
+title = Chiếu điều hòa lụa cao cấp giá rẻ nhất thị trường
+url = https://demxanh.com/chieu-dieu-hoa-lua-cao-cap.html
 
 [entershopping.vn]
 match = 3.4%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
 url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [thegioichieutruc.com]
-match = 51.7%%
-title = Chiếu điều hòa cao su non Tencel ghi
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-ghi/
+match = -31.0%%
+title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
 
 [demchinhhang.com]
 match = -20.7%%
@@ -39,7 +39,7 @@ url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 [www.diepxuan.com]
 match = 58.6%%
 title = Chiếu điều hòa cao su 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html?srsltid=AfmBOor2qiQitB3X4kHnTV27nFDjnc_b0LDTI5O95-rqhFIPUUjqheQN
+url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 
 [russo.vn]
 match = -20.7%%
