--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -112,9 +112,9 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 3/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -243.8%%
-title = Ngôi làng toàn “người khổng lồ” ở Việt Nam cực ít người biết ...
-url = https://www.youtube.com/watch?v=6u1GU8_6GQI
+match = -175.0%%
+title = VÌ SAO REAL CÓ THỂ CHIÊU MỘ CẦU THỦ MIỄN PHÍ ĐỈNH ...
+url = https://www.youtube.com/watch?v=Uh7dDbqSuuQ
 
 [books.google.com]
 match = -156.2%%
