--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-08-03 20:16:50
+lastsearch = 2024-08-04 00:32:34
 
 [www.mantubung.com]
-match = -100.0%%
-title = Màn trẻ em tự bung chống muỗi đa năng 80cm * 100cm
-url = https://www.mantubung.com/man-tre-em-tu-bung-chong-muoi-da-nang-84845.html
+match = -138.9%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [manbinhminh.com]
 match = -144.4%%
@@ -18,8 +18,8 @@ url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-qua
 
 [shopee.vn]
 match = -61.1%%
-title = Màn mùng chụp tự bung trẻ em chống muỗi cao cấp
-url = https://shopee.vn/Màn-mùng-chụp-tự-bung-trẻ-em-chống-muỗi-cao-cấp-cho-bé-lớn-trẻ-em-thông-minh-gấp-gọn-để-nôi-và-giường-i.833073428.19530759632
+title = màn tự bung giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn tự bung
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -62,9 +62,9 @@ title = Mùng Tự Bung Cho Bé 70cm x 90Cm
 url = https://mungchup.com/mung-thuyen-tu-bung-cho-be-67008.html
 
 [munghoangphat.com]
-match = -44.4%%
-title = Mùng chụp tự bung trẻ em cao cấp HOÀNG PHÁT
-url = https://munghoangphat.com/mung-chup-tu-bung-tre-em-cao-cap.html
+match = -88.9%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [ichikobaby.com]
 match = -88.9%%
