--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-140x200x9.html
 lastopen = 2024-06-06 17:10:12
 
 [search]
-lastsearch = 2024-08-03 22:13:58
+lastsearch = 2024-08-04 00:42:58
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -22,9 +22,9 @@ title = Đệm bông ép Everon
 url = https://everon.online/products/dem-bong-ep-everon
 
 [elec-horeca.com]
-match = -40.0%%
-title = Đại lý phân phối nệm tại Đà Nẵng
-url = https://elec-horeca.com/nem-chinh-hang-d9.html
+match = 10.0%%
+title = Đại Lý Nệm Everon tại Đà Nẵng
+url = https://elec-horeca.com/dai-ly-nem-everon-tai-da-nang-id279.html
 
 [tiki.vn]
 match = -20.0%%
@@ -59,7 +59,7 @@ url = https://www.diepxuan.com/everon/nem-everon.html?p=2
 [thegioidemonline.com]
 match = -40.0%%
 title = Bảng giá nệm Sông Hồng mới nhất 2022
-url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html
+url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html?srsltid=AfmBOooB1jKnaGlSyd74_-S-YyywTIxCdjU8ExO3ZBoCayjGRTU-IKN4
 
 [www.changagoidemeveron.vn]
 match = -105.0%%
