--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -197,8 +197,8 @@ title = Christopher Copperwheat
 url = https://www.ljmu.ac.uk/about-us/staff-profiles/faculty-of-engineering-and-technology/astrophysics-research-institute/christopher-copperwheat
 
 [cps-vo.org]
-match = -150.0%%
-title = *** 276 Total Attendees (listed in green) *** | Cyber- ...
+match = -190.0%%
+title = *** 276 Total Attendees (listed in green) *** | Cyber-Physical ...
 url = https://cps-vo.org/cps-pimtg24/registrants-attendees
 
 [www.va.gov]
