CI images update

--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -62,9 +62,9 @@ title = Chiếu Trúc Các Loại
 url = https://www.nemsaithanh.com/chieu-truc-cac-loai/
 
 [shopee.vn]
-match = -23.8%%
-title = Chiếu trúc 140cm đến 180cm hạt nâu có viền
-url = https://shopee.vn/Chiếu-trúc-140cm-đến-180cm-hạt-nâu-có-viền-i.231274383.5918690674
+match = 47.6%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.lazada.vn]
 match = -66.7%%
