--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -22,9 +22,9 @@ title = North Korea claims it launched 18 missiles at once in ...
 url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-missiles-at-once-in-major-test/
 
 [www.tiktok.com]
-match = -25.0%%
-title = Mayor of Kingstown Charlie Death
-url = https://www.tiktok.com/discover/mayor-of-kingstown-charlie-death
+match = -120.0%%
+title = His co-commentator called the comment "outrageous ...
+url = https://www.tiktok.com/@bbcnews/video/7396993628779859233
 
 [www.2id.korea.army.mil]
 match = -25.0%%
