--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-08-03 23:53:57
+lastsearch = 2024-08-04 01:46:33
 
 [shopee.vn]
-match = -104.2%%
-title = Thảm nỉ lau chân hình chữ nhật, chùi chân len mềm mịn dày dặn ...
-url = https://shopee.vn/Thảm-nỉ-lau-chân-hình-chữ-nhật-chùi-chân-len-mềm-mịn-dày-dặn-chống-trơn-trượt-hàng-chất-lượng-cao-i.1124996528.22086948160
+match = -87.5%%
+title = Thảm Len mịn khổ 40x60 siêu thấm hút, chống trơn trượt ...
+url = https://shopee.vn/Thảm-Len-mịn-khổ-40x60-siêu-thấm-hút-chống-trơn-trượt-in-hình-logo-bàn-chân-i.537614356.24901886559
 
 [lepetit.com.vn]
 match = -66.7%%
@@ -125,4 +125,9 @@ url = https://bachhoa.extra.vn/tham-chan-long-xu-hinh-trai-tim-cao-cap-sh1655649
 match = -58.3%%
 title = Thảm Chùi Chân Welcome | Thảm Nhựa Rối Welcome Giá ...
 url = https://thamtraisanlacviet.com/sptv/tham-chui-chan-welcome/
+
+[phongphumall.com.vn]
+match = 8.3%%
+title = Thảm Chùi Chân Belleto Cotton M824 40x60cm
+url = https://phongphumall.com.vn/products/tham-chui-chan-belleto-cotton-m824-40x60cm
 
