--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-03 23:48:33
+lastsearch = 2024-08-04 01:34:10
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -107,9 +107,9 @@ title = 14 năm Rooney ra mắt MU: Hat-trick huyền thoại, "Quỷ đầu ...
 url = https://www.24h.com.vn/bong-da/14-nam-rooney-ra-mat-mu-hat-trick-huyen-thoai-quy-dau-dan-gam-vang-c48a993554.html
 
 [www.facebook.com]
-match = -155.6%%
-title = Leon Wong
-url = https://www.facebook.com/leon.wong.505/?locale=eo_EO
+match = -25.0%%
+title = HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG MANDELIC ...
+url = https://www.facebook.com/trustpluscuanam/photos/a.113295247201464/113295160534806/?type=3
 
 [trongdoitam1.mysapo.net]
 match = 7.1%%
