--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-03 21:12:25
+lastsearch = 2024-08-04 01:50:42
 
 [hoa18.com]
 match = -84.2%%
-title = Bó hoa tươi Nắng Toả Chiều Nay" | Giá tốt nhất
-url = https://hoa18.com/san-pham/bo-hoa-tuoi-nang-toa-chieu-nay
+title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
+url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -105.3%%
-title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
-url = https://www.youtube.com/watch?v=demL5DzJK5M
+match = -89.5%%
+title = Cách đơn giản để cây mộc hương của bạn nở nhiều hoa
+url = https://www.youtube.com/watch?v=VQ9o9tAU0jk
 
 [kallos.co]
 match = -105.3%%
