--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-03 16:45:29
+lastsearch = 2024-08-04 01:41:59
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
 url = https://demxanh.com/chieu-truc-den.html
 
 [shopee.vn]
-match = -21.4%%
-title = Chiếu trúc 1m8 - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/chiếu/trúc/1m8
+match = -25.0%%
+title = Chiếu trúc 1m6 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m6
 
 [tongkhonem.com]
 match = 57.7%%
@@ -42,9 +42,9 @@ title = Chiếu trúc hạt đen có viền
 url = https://tongkhonem.com/san-pham/chieu-truc-hat-den-co-vien/
 
 [www.sendo.vn]
-match = -10.7%%
-title = Chiếu trúc đen không viền hàng việt nam cao cấp 1m2x2m ...
-url = https://www.sendo.vn/chieu-truc-den-khong-vien-hang-viet-nam-cao-cap-1m2x2m-duo-c-kie-m-ha-ng-31921335-117250615.html
+match = 0.0%%
+title = Chiếu trúc hạt đen cao cấp không viền 1m2x1m9 [Được ...
+url = https://www.sendo.vn/chieu-truc-hat-den-cao-cap-khong-vien-1m2x1m9-duo-c-kie-m-ha-ng-19203070-117250609.html
 
 [chanrathanhthuy.com]
 match = -3.6%%
