--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-08-04 00:26:15
+lastsearch = 2024-08-04 01:35:36
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -17,9 +17,9 @@ title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
-match = 35.5%%
-title = Ga chống thấm đa năng Olympia 2 trong 1
-url = https://demxanh.com/ga-chong-tham-da-nang-olympia-2-trong-1.html
+match = 25.8%%
+title = Ga chống thấm Olympia cotton cao cấp mới
+url = https://demxanh.com/ga-chong-tham-olympia-cotton-cao-cap-moi.html
 
 [dreamland.vn]
 match = -21.1%%
@@ -27,9 +27,9 @@ title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = 9.7%%
-title = Chăn Ga Gối Dreamland Chính Hãng Giá Tốt
-url = https://demxinh.vn/chan-ga-goi-dreamland/
+match = -35.5%%
+title = Nệm cao su thiên nhiên 1m8x2mx10cm chỉ 7.688.000đ. ...
+url = https://demxinh.vn/dem-cao-su/
 
 [dongahome.vn]
 match = 3.2%%
@@ -39,7 +39,7 @@ url = https://dongahome.vn/dem-lo-xo-cao-cap-hanvico-hera
 [vuanem.com]
 match = -35.5%%
 title = Để chuyện phòng the lên đỉnh, bạn nên chọn loại nệm nào?
-url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html?srsltid=AfmBOor1P21jcTCqcCn-5-L9ugqGqUfLf_gZgOxiEW7xuoqk_mOkzTyV
+url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html
 
 [uannga.vn]
 match = 6.5%%
@@ -72,9 +72,9 @@ title = Thorsten stiewe p53 cancer Ramayan episode 100 ramanand ...
 url = http://weeklyrentals.com/dorunit.cgi?url=xn----8sbbfekaevffmq4adcddba4axaci5q.xn--p1ai/2348615btlawcn7rfe43a
 
 [www.instagram.com]
-match = -41.2%%
-title = November 13, 2021
-url = https://www.instagram.com/giagon_decor/p/CWPYKYqpFOG/
+match = -35.5%%
+title = DemLienA (@giagon_decor) • Instagram photos and videos
+url = https://www.instagram.com/giagon_decor/
 
 [www.youtube.com]
 match = -144.4%%
