CI images update

--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-04 01:18:46
+lastsearch = 2024-08-04 02:17:03
 
 [www.galottery.com]
 match = -7.7%%
@@ -174,7 +174,7 @@ url = https://www.rn.ca.gov/applicants/lic-end.shtml
 [www.partstown.com]
 match = -215.4%%
 title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
-url = https://www.partstown.com/henny-penny/henec05-001?srsltid=AfmBOoq2aOXbs9TsqAjx_oqZHK5a9QUOtAUZgtRAHX-wk6rMXHA1VwpA
+url = https://www.partstown.com/henny-penny/henec05-001
 
 [www.imdb.com]
 match = 0.0%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -330.8%%
 title = Anthropological Papers of the American Museum of Natural History
-url = https://books.google.com/books?id=2XdBAQAAMAAJ&pg=PA37&lpg=PA37&dq=ga+ni+long+14&source=bl&ots=Hd6xezhrxJ&sig=ACfU3U2ZmQC5053SpNHCehzOTGaufiEBCA&hl=en&sa=X&ved=2ahUKEwj1opvMt9mHAxWUm4kEHSRyB3UQ6AF6BAgZEAM
+url = https://books.google.com/books?id=2XdBAQAAMAAJ&pg=PA32&lpg=PA32&dq=ga+ni+long+14&source=bl&ots=Hd6xeAawxG&sig=ACfU3U1frcSqmbetXcxWbMxgb_FR6amiyQ&hl=en&sa=X&ved=2ahUKEwiurdHPxNmHAxXcF1kFHRPAETQQ6AF6BAgYEAM
 
 [ottawabraves.com]
 match = -292.3%%
@@ -327,9 +327,9 @@ title = Phase diagram of the binary Ga-Ni metal alloy system up to ...
 url = https://www.researchgate.net/figure/Phase-diagram-of-the-binary-Ga-Ni-metal-alloy-system-up-to-10-at-Ni-in-Ga-The-blue_fig1_356235073
 
 [www.deutschconnectorstore.com]
-match = -200.0%%
-title = Deutsch 0462-203-12141 Size 12 Contact 14-12 Ga
-url = https://www.deutschconnectorstore.com/p-85-deutsch-0462-203-12141-contact-14-12-ga.html
+match = -238.5%%
+title = 0460-204-12141 Size 12 Contact 14-12 Ga | Prowireusa
+url = https://www.deutschconnectorstore.com/p-75-deutsch-0460-204-12141-contact-14-12-ga.html
 
 [georgiadogs.com]
 match = -92.3%%
