--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-03 15:24:17
+lastsearch = 2024-08-04 02:22:16
 
 [us.misumi-ec.com]
 match = -325.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA ...
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOorgcpXSaAStkM7wOp_X-UfcAhCPQmHRMuNAvmEfOUPLaD0tgVIo
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
 
 [www.amazon.com]
 match = -91.7%%
@@ -349,5 +349,5 @@ url = https://pc.fsu.edu/
 [books.google.com]
 match = -333.3%%
 title = Der n-tv-Atlas: die Welt hinter den Nachrichten ; [mit ...
-url = https://books.google.com/books?id=lFboHwfSwFsC&pg=PA360&lpg=PA360&dq=ga+phu+uc+16&source=bl&ots=-SL-zDWGMC&sig=ACfU3U3JjHH6_S1lMKjFK6lca830T3bJ6w&hl=en&sa=X&ved=2ahUKEwik2sjzm9aHAxWTlIkEHWEFMzUQ6AF6BAgtEAM
+url = https://books.google.com/books?id=lFboHwfSwFsC&pg=PA360&lpg=PA360&dq=ga+phu+uc+16&source=bl&ots=-SL-BvQJOF&sig=ACfU3U2Y3FqkA5_xuIZ4hRZM5pvQPaF7bw&hl=en&sa=X&ved=2ahUKEwiknf3kxdmHAxWWGFkFHTs8A5IQ6AF6BAgiEAM
 
