--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-03 23:53:37
+lastsearch = 2024-08-04 02:18:08
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -27,9 +27,9 @@ title = Kristi Noem
 url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
-match = -70.0%%
-title = Trenton Catholic Boys High School Friends
-url = https://www.facebook.com/groups/1002178786517553/?locale=hu_HU
+match = -160.0%%
+title = CDT Jake Sorrels successfully defended his senior thesis “ ...
+url = https://www.facebook.com/photo.php?fbid=2759708960745737&id=130999010283425&set=a.135510956498897&locale=hu_HU
 
 [www.vietnam.vn]
 match = -155.0%%
