--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-08-03 14:33:54
+lastsearch = 2024-08-04 02:24:39
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -25.0%%
-title = Simple Xiangling Build
-url = https://www.tiktok.com/discover/simple-xiangling-build
+match = -200.0%%
+title = Why I’m OBSESSED with baking my lip liner #hudabeauty ...
+url = https://www.tiktok.com/@hudabeauty/video/7267971747742371118?lang=en
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -235,4 +235,9 @@ url = https://fowm924.com/product/iipyowtm-75//
 match = -212.5%%
 title = tui warmdream 16 - Tui Magic Life Rixos Beldibi +16 - rltc309 ...
 url = https://rltc309.com/shop/vljjrwrj-233/
+
+[www.nwgm300.com]
+match = -143.8%%
+title = tui warmdream 16 - TUI MAGIC LIFE Bodrum - nwgm300.com
+url = https://www.nwgm300.com/bag/vljjrwrj-233/
 
