CI images update

--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-04 00:41:54
+lastsearch = 2024-08-04 02:38:26
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -158,8 +158,8 @@ url = https://www.vulture.com/2021/03/kimbra-interview-gotye-somebody-that-i-use
 
 [aemo.com.au]
 match = -114.3%%
-title = NEM Reform Electricity Wholesale Consultative Forum ( ...
-url = https://aemo.com.au/-/media/files/stakeholder_consultation/working_groups/other_meetings/electricity-wholesale-consultative-forum/meeting-16-presentation.pdf?la=en
+title = Record Demand in South Australia & Victoria 28 to 31 ...
+url = https://aemo.com.au/-/media/files/electricity/nem/market_notices_and_events/market_event_reports/archive/180-0091-pdf.pdf
 
 [www.nitrc.org]
 match = -21.4%%
@@ -267,8 +267,8 @@ title = Evolving "nofollow" – new ways to identify the nature of links
 url = https://developers.google.com/search/blog/2019/09/evolving-nofollow-new-ways-to-identify
 
 [www.tiktok.com]
-match = 0.0%%
-title = 
+match = -119.0%%
+title = Nem Nướng can be super eazy to make at home using store ...
 url = https://www.tiktok.com/@nolimitcooking/video/7166486631006965034?lang=en
 
 [www.inquirer.com]
@@ -392,9 +392,9 @@ title =
 url = https://www.last.fm/music/Edith+Piaf/_/Saving+Private+Ryan:+Tu+Es+Partout
 
 [eur-lex.europa.eu]
-match = -28.6%%
-title = C_202404641FR.000101.fmx.xml
-url = https://eur-lex.europa.eu/legal-content/FR/TXT/HTML/?uri=OJ:C_202404641
+match = -23.8%%
+title = C_202404641IT.000101.fmx.xml
+url = https://eur-lex.europa.eu/legal-content/IT/TXT/HTML/?uri=OJ:C_202404641
 
 [indicators.ohchr.org]
 match = -11.8%%
