--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-08-04 00:44:20
+lastsearch = 2024-08-04 02:26:29
 
 [dreamland.vn]
 match = 7.5%%
@@ -24,12 +24,12 @@ url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/
 [www.facebook.com]
 match = -8.0%%
 title = Chăn Ga Gối Đệm Dreamland
-url = https://www.facebook.com/changagoidemdreamland/
+url = https://www.facebook.com/Dreamland.com.vn/
 
 [thegioidemonline.com]
 match = 62.8%%
-title = Bộ chăn ga gối Dreamland cotton lụa NK PT33
-url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-3-3.html
+title = Bộ chăn ga gối Dreamland cotton lụa NK PT34
+url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-3-4.html
 
 [demdreamland.vn]
 match = 31.0%%
