--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-03 20:48:42
+lastsearch = 2024-08-04 02:38:04
 
 [tiki.vn]
 match = -133.3%%
@@ -12,9 +12,9 @@ title = Mua Chăn lông cừu 2 lớp loại dày cho bé nhiều mẫu
 url = https://tiki.vn/chan-long-cuu-2-lop-loai-day-cho-be-nhieu-mau-size-1m4-x-1m-sieu-am-p69905522.html?spid=160423870
 
 [joliefam.vn]
-match = -140.0%%
-title = Chăn cừu pháp Joliefam - Tổng hợp các mẫu màu đẹp
-url = https://joliefam.vn/chan-ga-goi-gia-dinh/chan-cuu-phap-joliefam/
+match = -13.3%%
+title = Chăn cừu pháp Joliefam ghi tối
+url = https://joliefam.vn/chan-cuu-phap-joliefam-ghi-toi/
 
 [www.lazada.vn]
 match = -66.7%%
@@ -37,9 +37,9 @@ title = Nhận biết chăn lông cừu hữu cơ và chăn tổng hợp - Lasan
 url = https://lasantevn.com/nhan-biet-chan-long-cuu-huu-co-va-chan-tong-hop/
 
 [shopee.vn]
-match = -180.0%%
-title = Chăn Lông Cừu Ultimate Loại Dày 2 Lớp Mới Nhất Có Sẵn ...
-url = https://shopee.vn/Chăn-Lông-Cừu-Ultimate-Loại-Dày-2-Lớp-Mới-Nhất-Có-Sẵn-Chăn-Lông-Kích-Thước-2mx2m3-i.221764189.4349699969
+match = -153.3%%
+title = chăn lông cừu 2 lớp giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chăn lông cừu 2 lớp
 
 [changadep88.vn]
 match = -86.7%%
@@ -94,7 +94,7 @@ url = https://www.dem365.vn/chan-long-cuu-gia-re/
 [demxanh.com]
 match = -73.3%%
 title = Chăn lông cừu Normal mã 12 Hoa kẻ ngang
-url = https://demxanh.com/chan-long-cuu-normal-ma-12-hoa-ke-ngang.html?srsltid=AfmBOop8IkpRhF5MZZA1E_Fx-AgUGgOLVkmjPpmsf32SB-uC_3wRiPo-
+url = https://demxanh.com/chan-long-cuu-normal-ma-12-hoa-ke-ngang.html
 
 [shope.io.vn]
 match = -186.7%%
@@ -160,4 +160,9 @@ url = https://audipet.com/cho-chan-cuu-duc.php
 match = -86.7%%
 title = Chăn lông cừu 2 lớp màu đỏ mận (2m x 2.3m)
 url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html
+
+[www.sayweee.com]
+match = -100.0%%
+title = Mua Chan Cuu gần tôi với giao hàng miễn phí
+url = https://www.sayweee.com/vi/grocery-near-me/vietnamese-lang/explore/chan-cuu
 
