--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-04 01:50:42
+lastsearch = 2024-08-04 02:31:44
 
 [hoa18.com]
 match = -84.2%%
-title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
-url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
+title = Bó hoa tươi Nắng Toả Chiều Nay" | Giá tốt nhất
+url = https://hoa18.com/san-pham/bo-hoa-tuoi-nang-toa-chieu-nay
 
 [www.youtube.com]
-match = -89.5%%
-title = Cách đơn giản để cây mộc hương của bạn nở nhiều hoa
-url = https://www.youtube.com/watch?v=VQ9o9tAU0jk
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
@@ -315,4 +315,9 @@ url = https://baoyenbai.com.vn/15/326419/nguyen-thuy-linh-thua-tiec-nuoi-o-tran-
 match = -115.8%%
 title = World Press - ✨ MISS GRAND VIETNAM 2024 FINAL ...
 url = https://m.facebook.com/WPressOfficial/photos/-miss-grand-vietnam-2024final-rankings-by-world-press18h-tối-nay-0308-đêm-chung-/1076770573805061/
+
+[vov.vn]
+match = -142.1%%
+title = TP.HCM một năm triển khai Nghị quyết 98: Nhìn lại để ...
+url = https://vov.vn/chinh-tri/tphcm-mot-nam-trien-khai-nghi-quyet-98-nhin-lai-de-buoc-nhanh-hon-post1112070.vov
 
