--- a/images/chieu-dieu-hoa-lua-160x200/config.ini
+++ b/images/chieu-dieu-hoa-lua-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 lastopen = 2024-08-02 20:47:57
 
 [search]
-lastsearch = 2024-06-20 06:46:14
+lastsearch = 2024-08-04 02:30:59
 
 [demxanh.com]
-match = -15.4%%
-title = Chiếu điều hòa lụa cao cấp giá rẻ nhất thị trường
-url = https://demxanh.com/chieu-dieu-hoa-lua-cao-cap.html
+match = 3.8%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [thegioidemviet.vn]
 match = -15.4%%
@@ -19,12 +19,12 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-lua/
 [tiki.vn]
 match = -7.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632732
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307862
 
 [foreverbedding.net]
-match = 11.5%%
-title = Chiếu điều hòa (Mẫu 2) - Forever Bedding
-url = https://foreverbedding.net/chieu-dieu-hoa-mau-2
+match = -26.9%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [chieutrelanlan.com]
 match = 42.3%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa lụa 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 
 [shopee.vn]
-match = -34.6%%
-title = [HÀNG CHÍNH HÃNG] Chiếu mây điều hòa Chunqiu cao ...
-url = https://shopee.vn/-HÀNG-CHÍNH-HÃNG-Chiếu-mây-điều-hòa-Chunqiu-cao-cấp-nhập-khẩu-chính-hãng-đủ-kích-thước-mát-lạnh-và-êm-ái.-i.264060043.5284648307
+match = -30.8%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.lazada.vn]
 match = -46.2%%
@@ -55,4 +55,9 @@ url = https://nanara.vn/p/set-chieu-dieu-hoa-cao-su-tencel/
 match = 34.6%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
 url = https://thegioidemonline.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html
+
+[thegioichieutruc.com]
+match = -65.4%%
+title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
 
