--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-04 00:32:55
+lastsearch = 2024-08-04 02:29:14
 
 [shopee.vn]
 match = 4.3%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/?locale=vi_VN
 
 [www.sendo.vn]
-match = -69.6%%
-title = Chiếu Cói Thái Bình Siêu Tốt, Giá Gốc, Thanh Toán Khi ...
-url = https://www.sendo.vn/chieu-coi-thai-binh.htm
+match = 34.8%%
+title = Chiếu nhựa thái bình 1m x 1m9 - chieu
+url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
 
 [trangvangvietnam.com]
 match = -87.0%%
@@ -74,7 +74,7 @@ url = https://h5.lazada.vn/products/freeship-max-ma-giam-gia-chieu-nhua-thai-bin
 [m.facebook.com]
 match = 85.0%%
 title = Chiếu nhựa Thái Bình
-url = https://m.facebook.com/p/Chiếu-nhựa-Thái-Bình-100083672378137/
+url = https://m.facebook.com/100083672378137
 
 [chieu.com.vn]
 match = -117.4%%
