--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-08-03 22:36:01
+lastsearch = 2024-08-04 02:40:53
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -57,9 +57,9 @@ title = Tấm trải / Topper - K-Bedding
 url = https://kbedding.vn/danh-muc/nem/tam-trải-topper/
 
 [dailyeveron.vn]
-match = 59.1%%
-title = Tấm Trải Mát Cool Pad EVERON
-url = https://dailyeveron.vn/phu-kien-dem/tam-trai-mat-cool-pad-everon.html
+match = -45.5%%
+title = Tấm Trải Văn Phòng EVERON, tấm trải tiện ích Everon
+url = https://dailyeveron.vn/phu-kien-dem/tam-trai-van-phong-everon.html
 
 [everon.online]
 match = 31.8%%
