--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-04 00:28:03
+lastsearch = 2024-08-04 02:41:12
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,19 +17,19 @@ title = The 5th edition of the World Health Organization ...
 url = https://pubmed.ncbi.nlm.nih.gov/35732829/
 
 [www.dir.ca.gov]
-match = -21.1%%
-title = ADDITIONAL CASE INFORMATION
-url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
+match = -126.3%%
+title = Workers' Compensation Appeals Board - Panel decisions
+url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
-match = 5.3%%
-title = Margaret Tempero, MD
-url = https://profiles.ucsf.edu/margaret.tempero
+match = -7.7%%
+title = Li Zhang, PhD
+url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
-match = -73.7%%
-title = Long-term complications of COVID-19 - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8721906/
+match = -168.4%%
+title = An integrative review of physical activity in adults with ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8831770/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -21.4%%
-title = Kathleen Fisch
-url = https://profiles.ucsd.edu/kathleen.fisch
+match = -10.5%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [medboard.nv.gov]
 match = -136.8%%
@@ -54,7 +54,7 @@ url = https://www.techcosmos.com.hk/thomas/publications/
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2022/candidates.pdf
 
 [www.ajnr.org]
 match = 21.1%%
