CI images update

--- a/images/chieu-cay-ht-120x190/config.ini
+++ b/images/chieu-cay-ht-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-120x190.html
 lastopen = 2024-08-01 18:48:15
 
 [search]
-lastsearch = 2024-08-03 22:31:35
+lastsearch = 2024-08-04 03:28:06
 
 [shopee.vn]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Chiếu Trúc Tăm HT Loại Bền , Đẹp
 url = https://shopee.vn/Chiếu-Trúc-Tăm-HT-Loại-Bền-Đẹp-i.117037771.1936980907
 
 [www.diepxuan.com]
-match = -10.0%%
-title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
+match = -14.3%%
+title = HT - Điệp Xuân
+url = https://www.diepxuan.com/ht.html
 
 [chuyenhangviet.com]
 match = -90.0%%
