--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-04 01:43:23
+lastsearch = 2024-08-04 03:27:24
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -48,8 +48,8 @@ url = https://thongtindoingoai.caobang.gov.vn/Default.aspx?sid=1346&pageid=33880
 
 [www.youtube.com]
 match = -200.0%%
-title = Tin Bóng Đá Tối 3/8: BAYERN ÉP GIÁ 2 MỤC TIÊU CỦA MU ...
-url = https://www.youtube.com/watch?v=M3dzmritR18
+title = Chuẩn bị gì khi Người Thân Sắp Tắt Thở để Linh Hồn được ...
+url = https://www.youtube.com/watch?v=UKKHEGf8tXU
 
 [vi.wikipedia.org]
 match = -50.0%%
