--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-04 02:17:03
+lastsearch = 2024-08-04 03:16:46
 
 [www.galottery.com]
 match = -7.7%%
@@ -212,9 +212,9 @@ title =
 url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-features-benefits-of-each/
 
 [books.google.com]
-match = -330.8%%
-title = Anthropological Papers of the American Museum of Natural History
-url = https://books.google.com/books?id=2XdBAQAAMAAJ&pg=PA32&lpg=PA32&dq=ga+ni+long+14&source=bl&ots=Hd6xeAawxG&sig=ACfU3U1frcSqmbetXcxWbMxgb_FR6amiyQ&hl=en&sa=X&ved=2ahUKEwiurdHPxNmHAxXcF1kFHRPAETQQ6AF6BAgYEAM
+match = -161.5%%
+title = Crystal Data: Inorganic compounds 1967-1969
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx-y9-y-&sig=ACfU3U3sOUB0_u9k1XtB6xKwF0kQUCdcsQ&hl=en&sa=X&ved=2ahUKEwiG-ZD80dmHAxVyFFkFHfkIAMMQ6AF6BAgbEAM
 
 [ottawabraves.com]
 match = -292.3%%
