--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-04 02:38:26
+lastsearch = 2024-08-04 03:29:28
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -38.1%%
 title = A Dictionary of Music and Musicians
-url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8ElGN5pc&sig=ACfU3U1dPt6yrzfOsIYI3GNAXoojrPRBqg&hl=en&sa=X&ved=2ahUKEwiI-9etr9mHAxVakokEHSm8FIcQ6AF6BAgsEAM
+url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8ElHN5ug&sig=ACfU3U1dAGdk_7wJQf1hTtc5mpXVmXvZQA&hl=en&sa=X&ved=2ahUKEwi_iurn1NmHAxWJFlkFHeXFMykQ6AF6BAgfEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -158,8 +158,8 @@ url = https://www.vulture.com/2021/03/kimbra-interview-gotye-somebody-that-i-use
 
 [aemo.com.au]
 match = -114.3%%
-title = Record Demand in South Australia & Victoria 28 to 31 ...
-url = https://aemo.com.au/-/media/files/electricity/nem/market_notices_and_events/market_event_reports/archive/180-0091-pdf.pdf
+title = NEM Reform Electricity Wholesale Consultative Forum ( ...
+url = https://aemo.com.au/-/media/files/stakeholder_consultation/working_groups/other_meetings/electricity-wholesale-consultative-forum/meeting-16-presentation.pdf?la=en
 
 [www.nitrc.org]
 match = -21.4%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -100.0%%
-title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
-url = https://www.formatbiz.it/dettNews.aspx?id=9944
+match = -66.7%%
+title = NEM Dubrovnik 2025 Dates Announced Following ...
+url = https://www.formatbiz.it/dettNews.aspx?id=11677
 
 [yro.slashdot.org]
 match = -114.3%%
@@ -267,8 +267,8 @@ title = Evolving "nofollow" – new ways to identify the nature of links
 url = https://developers.google.com/search/blog/2019/09/evolving-nofollow-new-ways-to-identify
 
 [www.tiktok.com]
-match = -119.0%%
-title = Nem Nướng can be super eazy to make at home using store ...
+match = 0.0%%
+title = 
 url = https://www.tiktok.com/@nolimitcooking/video/7166486631006965034?lang=en
 
 [www.inquirer.com]
