--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-04 02:26:44
+lastsearch = 2024-08-04 03:17:48
 
 [erado.vn]
-match = 0.0%%
-title = Giường ngủ da hạng sang mã 14
-url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
+match = 5.0%%
+title = Giường da hạng sang mã AT14
+url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-at14.html?srsltid=AfmBOorPdRrHabphwjorJnfEYvfVdFNCz86I_6tjpCSEsZgkxg85g3vi
 
 [shopee.vn]
 match = -105.0%%
@@ -24,7 +24,7 @@ url = https://noithatami.com/giuong-ngu-boc-dem-1m8/
 [ninhouse.vn]
 match = -45.0%%
 title = Giá drap trải giường | Bộ chăn ga gối đệm ...
-url = https://ninhouse.vn/collections/drap
+url = https://ninhouse.vn/collections/drap?srsltid=AfmBOoqS711n1wU_fbHjlMG2LdT0sQXdfinc2opNfyb0SY4KHEXt38JD
 
 [giuongxep.com]
 match = -70.0%%
@@ -169,7 +169,7 @@ url = https://dogohiephien.vn/giuong-go-dep/
 [noithatcaco.vn]
 match = -110.0%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOoqTdZh79TRVPVucohenDPfmgBJeJoQY94PqjWP17SRF9Reqv4ao
 
 [noithatminhtan.com]
 match = 5.0%%
