CI images update

--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -38,13 +38,13 @@ url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon
 
 [changagoidemsonghong.com]
 match = -53.6%%
-title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22052
-url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc52
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
+url = https://changagoidemsonghong.com/chan-ga-goi-khong-chan-bc62
 
 [songhong.info]
 match = -53.6%%
-title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22063
-url = https://songhong.info/chan-ga-goi-khong-chan-bc63
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22051
+url = https://songhong.info/chan-ga-goi-khong-chan-bc51
 
 [www.changagoidemeveron.vn]
 match = 0.0%%
@@ -155,4 +155,19 @@ url = http://www.diversitybusiness.com/SpecialFunctions/NewSiteReferences.asp?Nw
 match = 0.0%%
 title = Video help, tips, and techniques
 url = https://archive.org/help/video.php?identifier=jadi-anime-cap-cut-template-4&ht=480&wd=640&url=https://xn--b1axgco8a.xn--p1ai/2974861atemvoyage4fe43y
+
+[www.airbnb.com.vn]
+match = -78.6%%
+title = Nơi nghỉ dưỡng cho thuê và nhà tại Saint-Just-de-Claix - Airbnb
+url = https://www.airbnb.com.vn/saint-just-de-claix-france/stays
+
+[ngungon.com]
+match = -766.7%%
+title = Nệm
+url = https://ngungon.com/danh-muc-san-pham/nem/
+
+[www.facebook.com]
+match = -71.4%%
+title = TokyoLife - Nhẹ thoáng, êm mịn - Nâng niu giấc ngủ cả gia...
+url = https://www.facebook.com/TokyoLifeNow/posts/1195544030828439/
 
