--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-04 01:24:52
+lastsearch = 2024-08-04 03:34:15
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -57,9 +57,9 @@ title = Chuyên bộ, mẫu chăn ga gối đệm đẹp chính hãng Hàn ...
 url = https://m.enbac.com/?page=list&province_id=ha-noi&cate_alias=&category_id=246&ebname=phong-ngu-chan-ga-goi&set_city=1&PageSpeed=noscript&page_no=54
 
 [demxanh.com]
-match = 28.6%%
-title = Bộ chăn ga gối lụa 6 món L6M18
-url = https://demxanh.com/bo-chan-ga-goi-lua-6-mon-l6m18.html
+match = -52.4%%
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 18
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html
 
 [dongahome.vn]
 match = -57.1%%
