--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-08-03 22:37:46
+lastsearch = 2024-08-04 03:33:54
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOorMoQBXexbPCDZ36Ppk_NnlQHV07sO54WkqLaamiH-KodYhGMdP
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/search?keyword=chiếu điều hoà
 [demviethome.vn]
 match = 14.8%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOoqDFbcJSayCgEvKxpOY4bMrWpSP2zV-jEqN0NQoFjMwCwHDpwpu
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
 
 [lybalansieucute.com]
 match = 37.0%%
@@ -49,7 +49,7 @@ url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 [foreverbedding.net]
 match = 0.0%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOoqycl8bRabwI_6Tx_AlPFVY9SuG4GRfJdZqN0XPG6hj_F59Ycuv
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [mandep.vn]
 match = 37.0%%
