--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-03 20:29:17
+lastsearch = 2024-08-04 03:43:15
 
 [www.gov.uk]
-match = -200.0%%
-title = Visit the UK as a Standard Visitor: If you're under 18
+match = 0.0%%
+title = 
 url = https://www.gov.uk/standard-visitor/if-youre-under-18
 
 [www.oltarsh.com]
