--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-04 02:31:44
+lastsearch = 2024-08-04 03:38:29
 
 [hoa18.com]
 match = -84.2%%
-title = Bó hoa tươi Nắng Toả Chiều Nay" | Giá tốt nhất
-url = https://hoa18.com/san-pham/bo-hoa-tuoi-nang-toa-chieu-nay
+title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
+url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -105.3%%
-title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
-url = https://www.youtube.com/watch?v=demL5DzJK5M
+match = -147.4%%
+title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
+url = https://www.youtube.com/watch?v=NPdIFgtFTso
 
 [kallos.co]
 match = -105.3%%
@@ -97,9 +97,9 @@ title = VNeID là tài khoản duy nhất thực hiện thủ tục hành chính
 url = https://www.htv.com.vn/vneid-la-tai-khoan-duy-nhat-thuc-hien-thu-tuc-hanh-chinh-dich-vu-cong-tu-ngay-17
 
 [www.baodienbienphu.com.vn]
-match = -100.0%%
-title = Giá vàng giảm mạnh, mất mốc 71 triệu đồng/lượng
-url = https://www.baodienbienphu.com.vn/tin-tuc/kinh-te/209883/gia-vang-giam-manh-mat-moc-71-trieu-dongluong?page=115
+match = -47.4%%
+title = Giá vàng mất mốc 67 triệu đồng/lượng
+url = https://www.baodienbienphu.com.vn/tin-tuc/kinh-te/204300/gia-vang-mat-moc-67-trieu-dongluong?page=73
 
 [nongnghiep.vn]
 match = -121.1%%
