--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-03 22:30:29
+lastsearch = 2024-08-04 03:28:07
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Chiếu trúc thai đen14 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-thai-den14.html?srsltid=AfmBOorQ8SedU_HPjnotsvBnkV7hr7tzmf40E3R9IwE-B9wrA-rmqP90
+url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoo9RjB8qEM4szRi3kySo4bRtoHlBsQlp1cXeDRnVYu1TcHG-8lp
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -19.0%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = 9.5%%
+title = Chiếu trúc cao cấp Thái Lan 1m6x200cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-thai-lan-1m6x2m-87.html
 
 [www.youtube.com]
 match = -147.6%%
@@ -87,9 +87,9 @@ title = Bảo vệ đê, kè mùa mưa, lũ
 url = https://baohungyen.vn/bao-ve-de-ke-mua-mua-lu-3172981.html
 
 [baotainguyenmoitruong.vn]
-match = -85.7%%
-title = Người Cơ Tu và giấc mơ đổi đời mang tên " Ra Zéh"
-url = https://baotainguyenmoitruong.vn/nguoi-co-tu-va-giac-mo-doi-doi-mang-ten-ra-zeh-376755.html
+match = -104.8%%
+title = Những “chiến sĩ” áo xanh giúp người dân chuyển đổi xanh
+url = https://baotainguyenmoitruong.vn/nhung-chien-si-ao-xanh-giup-nguoi-dan-chuyen-doi-xanh-377802.html
 
 [trithucvn.co]
 match = -33.3%%
