CI images update

--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-04 02:24:18
+lastsearch = 2024-08-04 04:37:02
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -87,8 +87,8 @@ title = Welcome to CONINCO., JSC
 url = https://coninco.com.vn/
 
 [www.evn.com.vn]
-match = 16.7%%
-title = Mực nước các hồ thủy điện
+match = -70.8%%
+title = Trang thông tin điện tử - Tập đoàn Điện lực Việt Nam
 url = https://www.evn.com.vn/c3/thong-tin-ho-thuy-dien/Muc-nuoc-cac-ho-thuy-dien-117-123.aspx
 
 [www.sbv.gov.vn]
@@ -320,4 +320,9 @@ url = https://vi.wikipedia.org/wiki/Kinh_tế_Hoa_Kỳ
 match = -37.5%%
 title = QUY NHON PORT - CÔNG TY CỔ PHẦN CẢNG QUY NHƠN
 url = https://www.quynhonport.vn/
+
+[dongxoai.gov.vn]
+match = -33.3%%
+title = Cổng thông tin điện tử thành phố Đồng Xoài
+url = https://dongxoai.gov.vn/
 
