--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-03 18:28:19
+lastsearch = 2024-08-04 04:34:15
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -685,4 +685,9 @@ url = https://www.swagelok.com/downloads/webcatalogs/en/ms-01-140.pdf
 match = -123.1%%
 title = Omni Hotel at The Battery Atlanta
 url = https://www.omnihotels.com/hotels/atlanta-battery
+
+[lasvegas.electricdaisycarnival.com]
+match = -292.3%%
+title = EDC Las Vegas | May 16-18, 2025 | Las Vegas Motor Speedway
+url = https://lasvegas.electricdaisycarnival.com/
 
