--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-08-04 02:34:13
+lastsearch = 2024-08-04 04:34:55
 
 [silverwow.net]
 match = -255.6%%
@@ -174,7 +174,7 @@ url = https://www.homedepot.com/b/Hardware-Chains-Ropes-Chain/N-5yc1vZc2a3
 [www.kuerbisollisshop.de]
 match = -366.7%%
 title = 2212 Chan 2023 (1003,3kg) - Kürbisollis Online Shop
-url = https://www.kuerbisollisshop.de/index.php?main_page=product_info&cPath=1_82_85&products_id=2676&language=en
+url = https://www.kuerbisollisshop.de/index.php?main_page=product_info&products_id=2676&language=en
 
 [market.borong.com]
 match = -155.6%%
@@ -219,7 +219,7 @@ url = https://www.itshot.com/jewelry/education-guides/strongest-chains
 [mightydepot.com]
 match = -377.8%%
 title = Chung John Wong Sun Chan pepper 3kg Korean food ...
-url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_
+url = https://mightydepot.com/products/chung-john-wong-sun-chan-pepper-3kg-korean-food-korea-seasoning-ryokiyoshi-sei-en_b004jhiys0_?srsltid=AfmBOoruq683NWC0jNWfhF8OQD26IP_VZjtfTkIMeT_fHsch_xLRaJKk
 
 [s.click.aliexpress.com]
 match = -444.4%%
