--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-04 02:27:09
+lastsearch = 2024-08-04 04:37:44
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = 37.0%%
-title = chăn tuyết thái lan sịn cao cấp
-url = https://shopee.vn/chăn-tuyết-thái-lan-sịn-cao-cấp-i.1126803410.22661927902
+match = -25.9%%
+title = chăn lông cừu 4kids thái lan giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=chăn lông cừu 4kids thái lan
 
 [www.lazada.vn]
 match = 3.7%%
