--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-04 01:31:28
+lastsearch = 2024-08-04 04:36:19
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -445,4 +445,9 @@ url = https://xoilaczvu.tv/truc-tiep/magic-united-tfa-vs-north-lakes-luc-1400-ng
 match = -193.3%%
 title = phân lập, tuyển chọn chủng vi khuẩn chịu nhiệt độ cao
 url = https://journal.vnuf.edu.vn/vi/article/download/966/872/1740
+
+[www.circlek.com.vn]
+match = -186.7%%
+title = Hệ Thống cửa hàng Circle K Việt NamCircle K Việt Nam
+url = https://www.circlek.com.vn/vi/he-thong-circle-k/
 
