--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-03 23:36:42
+lastsearch = 2024-08-04 04:29:01
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -143.8%%
-title = "Mục sở thị" vườn cây cảnh bạc tỷ rộng 3 ha | VTC16
-url = https://www.youtube.com/watch?v=KBEvg9f6rxA
+match = -168.8%%
+title = VÌ SAO REAL CÓ THỂ CHIÊU MỘ CẦU THỦ MIỄN PHÍ ĐỈNH ...
+url = https://www.youtube.com/watch?v=Uh7dDbqSuuQ
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -682,9 +682,9 @@ title = Cát Tiên: Quyết liệt triển khai các biện pháp phòng, chốn
 url = https://baolamdong.vn/xa-hoi/202408/cat-tien-quyet-liet-trien-khai-cac-bien-phap-phong-chong-benh-sot-xuat-huyet-e201d52/
 
 [www.pnj.com.vn]
-match = -162.5%%
-title = Dây Chuyền Nam Nữ Vàng Bạc Kim Cương Đẹp, Cao Cấp ...
-url = https://www.pnj.com.vn/day-chuyen/
+match = -200.0%%
+title = Trang Sức Vàng: Vàng Trắng, Vàng Ý, Vàng 18K, 24K Cao ...
+url = https://www.pnj.com.vn/trang-suc-vang/
 
 [www.tiktok.com]
 match = 27.3%%
