--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-04 02:27:05
+lastsearch = 2024-08-04 04:32:48
 
 [shopee.vn]
-match = -12.0%%
-title = Màn chụp tự bung đỉnh vuông Kiều Phi - Mẫu mùng ...
-url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.286850546.3461062779
+match = 48.0%%
+title = Màn Chụp Tự Bung đỉnh vuông Mùng ...
+url = https://shopee.vn/Màn-Chụp-Tự-Bung-đỉnh-vuông-Mùng-Chụp-Đỉnh-Vuông-viền-trơn-cao-cấp-i.92196959.13058100091
 
 [munghoangphat.com]
-match = -36.0%%
-title = (3 CỬA) Mùng đỉnh vuông 1m4 x 2m cao cấp có viền chân
-url = https://munghoangphat.com/-3-cua-mung-dinh-vuong-1m4-x-2m-cao-cap-co-vien-chan.html
+match = 48.0%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [www.mungbaobao.com]
-match = -32.0%%
-title = Mùng Chụp Tự Bung Cao Cấp Giá Tốt, Xu Hướng Mới ...
-url = https://www.mungbaobao.com/mung-chup-tu-bung-cao-cap.html
+match = -28.0%%
+title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
+url = https://www.mungbaobao.com/
 
 [tiki.vn]
 match = -28.0%%
