--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-08-04 03:27:01
+lastsearch = 2024-08-04 04:36:38
 
 [www.instagram.com]
 match = -144.4%%
@@ -14,7 +14,7 @@ url = https://www.instagram.com/huuloc861/
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOorMhAf3LDQMfGZFjfQVzWuAw5vAq6ZkIttKnJbJ-U1GYW2qdcWd
 
 [www.facebook.com]
 match = -11.1%%
@@ -39,12 +39,12 @@ url = https://www.proz.com/profile/2092720
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOopgyqHSZM7MW6ftWSl9UPGrSmqBxZv1p7zzIq5NxdF74N54tl6D
 
 [m.facebook.com]
-match = -11.1%%
-title = Nem Nướng added a new photo.
-url = https://m.facebook.com/100054522756775/photos/961532129007537/
+match = -100.0%%
+title = Người Việt ở Seattle | 🔥🔥🔥 𝐌𝐚̆́𝐦 𝐧𝐞̂𝐦 𝐃𝐢̀ 𝐂𝐚̂̉𝐧 Đ𝐚̀ ...
+url = https://m.facebook.com/groups/nguoivietseattle.usa/posts/2080619245611358/
 
 [lanchi.vn]
 match = 16.7%%
