--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-08-03 20:08:17
+lastsearch = 2024-08-04 04:30:42
 
 [www.diepxuan.com]
-match = 5.3%%
-title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+match = -16.7%%
+title = Túi Singapore 150x190x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 
 [www.tui.co.uk]
 match = -58.3%%
