--- a/images/nem-foam-dreamland-uc-200x220x20/config.ini
+++ b/images/nem-foam-dreamland-uc-200x220x20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-200x220x20.html
 lastopen = 2024-06-07 00:49:31
 
 [search]
-lastsearch = 2024-08-03 16:55:13
+lastsearch = 2024-08-04 04:59:57
 
 [www.diepxuan.com]
-match = 21.9%%
-title = Nệm Foam Nami 150x190x15 - Điệp Xuân
-url = https://www.diepxuan.com/nem-foam-nami-150x190x15.html
+match = 31.2%%
+title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [dreamfoambedding.com]
 match = -13.0%%
