--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-04 01:21:49
+lastsearch = 2024-08-04 04:56:40
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -17,9 +17,9 @@ title = Chiếu đèn điều trị vàng da sơ sinh ở trẻ trong bao lâu?
 url = https://www.vinmec.com/vie/bai-viet/chieu-den-dieu-tri-vang-da-so-sinh-o-tre-trong-bao-lau-vi
 
 [www.hotdeal.vn]
-match = -32.1%%
-title = Madina Beauty & Academy - Cấy Tảo/ Hồng Sâm/ Ủ Trắng
-url = https://www.hotdeal.vn/ho-chi-minh/cham-soc-da-mat/madina-beauty-academy-cay-tao-hong-sam-u-trang-lan-kim-363884.html
+match = -25.0%%
+title = ĐIỀU TRỊ MỤN LƯNG/ THÂM NÁCH/ MÔNG/ BẸN/ LĂN ...
+url = https://www.hotdeal.vn/ho-chi-minh/dieu-tri-mun-tham-nam/dieu-tri-mun-lung-tham-nach-mong-ben-lan-kim-sieu-vi-diem-tri-seo-ro-nam-tan-nhang-phi-kim-tao-bien-cam-ket-hieu-qua-100-mimosa-spa-359573.html
 
 [www.youtube.com]
 match = -60.7%%
