--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-04 04:11:56
+lastsearch = 2024-08-04 04:51:42
 
 [demxanh.com]
 match = 34.5%%
@@ -17,9 +17,9 @@ title = Bộ Chiếu Cao Su Điều Hòa Mix 180x200 (3 Món)...
 url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379
 
 [www.lazada.vn]
-match = -27.6%%
-title = chiếu điều hòa mát lạnh chiếu cao su non 5d bọc nệm mền ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-boc-nem-men-min-thoang-mat-hang-nhap-khau-loai-1size-160x200-180x200-220x200-i1918879701.html
+match = -17.2%%
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [tiki.vn]
 match = 20.7%%
@@ -37,9 +37,9 @@ title = chiếu điều hòa cao su non tencel latex 5D mềm mịn mướt ...
 url = https://shopee.vn/chiếu-điều-hòa-cao-su-non-tencel-latex-5D-mềm-mịn-mướt-mát-size-160x200-180x200-i.1063512412.22353005341
 
 [entershopping.vn]
-match = 3.4%%
-title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
+match = -13.8%%
+title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [kyoryo.vn]
 match = 20.7%%
@@ -62,9 +62,9 @@ title = Chiếu điều hòa caosu non 2D 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html
 
 [chiaki.vn]
-match = 10.3%%
-title = Chiếu Điều Hòa Tencel Latex Cao Su Non 5D mẫu 2022
-url = https://chiaki.vn/chieu-dieu-hoa-tencel-latex-cao-su-non-5d-mau-2022
+match = 13.8%%
+title = Chiếu điều hòa cao su non Tencel Latex 2D mẫu 2022
+url = https://chiaki.vn/chieu-dieu-hoa-cao-su-non-tencel-latex-2d-mau-2022
 
 [thegioichieutruc.com]
 match = -27.6%%
