--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-08-04 02:13:15
+lastsearch = 2024-08-04 04:59:38
 
 [shopee.vn]
-match = -62.5%%
-title = Chiếu mây điều hòa, chiếu điều hòa nhật bản loại dày cao ...
-url = https://shopee.vn/Chiếu-mây-điều-hòa-chiếu-điều-hòa-nhật-bản-loại-dày-cao-cấp-thông-minh-siêu-mát-và-siêu-thoáng-đủ-kích-thước-i.458989698.24414242012
+match = -45.8%%
+title = Chiếu mây điều hòa cao cấp Betlep, an toàn cho sức khỏe
+url = https://shopee.vn/Chiếu-mây-điều-hòa-cao-cấp-Betlep-an-toàn-cho-sức-khỏe-i.494447407.19787544696
 
 [www.diepxuan.com]
 match = 100.0%%
