--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-03 20:00:18
+lastsearch = 2024-08-04 05:00:17
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Giữ nghề dệt chiếu Long Cang
 url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -175.0%%
-title = Dây thìa canh - THẦN DƯỢC cho người tiểu đường | VTC16
-url = https://www.youtube.com/watch?v=yNsnwRBCw_k
+match = -212.5%%
+title = Mệt mỏi vì xung đột, nhiều người dân Ukraine ủng hộ hòa ...
+url = https://www.youtube.com/watch?v=6vFiUCFz494
 
 [books.google.com]
 match = -250.0%%
@@ -317,9 +317,9 @@ title = Bảo Lộc: Xe cấp cứu tới điểm thi đón 2 thí sinh bị tai
 url = https://baolamdong.vn/xa-hoi/202406/bao-loc-xe-cap-cuu-toi-diem-thi-don-2-thi-sinh-bi-tai-nan-den-benh-vien-dieu-tri-ed827a4/
 
 [baochinhphu.vn]
-match = -225.0%%
-title = Thủ tướng tưởng niệm các anh hùng liệt sĩ và tặng quà gia ...
-url = https://baochinhphu.vn/thu-tuong-tuong-niem-cac-anh-hung-liet-si-va-tang-qua-gia-dinh-chinh-sach-tai-thai-nguyen-102240728084907468.htm
+match = -206.2%%
+title = Trao quyền cho thanh thiếu niên dẫn đầu phong trào toàn ...
+url = https://baochinhphu.vn/trao-quyen-cho-thanh-thieu-nien-dong-gop-vao-cong-cuoc-phong-chong-mua-ban-nguoi-102240803161654833.htm
 
 [eva.vn]
 match = -212.5%%
@@ -387,9 +387,9 @@ title = 16h hôm nay 16-7, m ở cửa xả đáy thứ hai hồ thủy điện 
 url = https://hanoimoi.vn/16h-hom-nay-16-7-m-o-cua-xa-day-thu-hai-ho-thuy-dien-hoa-binh-672188.html
 
 [caobangtv.vn]
-match = -162.5%%
-title = Liên tiếp 4 trận động đất xảy ra tại tỉnh Kon Tum
-url = http://caobangtv.vn/tin-tuc-n75830/lien-tiep-4-tran-dong-dat-xay-ra-tai-tinh-kon-tum.html
+match = -231.2%%
+title = Rà soát, đánh giá thực hiện chương trình nông thôn mới tại ...
+url = http://caobangtv.vn/tin-tuc-n75849/bao-lac-ra-soat-danh-gia-thuc-hien-chuong-trinh-nong-thon-moi-tai-xa-huy-giap.html
 
 [bxmt.com.vn]
 match = -156.2%%
