--- a/images/ruot-goi-ke-korea-45x65/config.ini
+++ b/images/ruot-goi-ke-korea-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 lastopen = 2024-08-02 00:29:53
 
 [search]
-lastsearch = 2024-08-03 18:58:10
+lastsearch = 2024-08-04 04:46:20
 
 [demxanh.com]
-match = -47.8%%
-title = Ruột gối Olympia khuyến mãi giá rẻ nhất thị trường
-url = https://demxanh.com/ruot-goi-olympia.html
+match = -43.5%%
+title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
+url = https://demxanh.com/ruot-goi.html
 
 [sieuthidemonline.vn]
 match = -17.4%%
@@ -17,9 +17,9 @@ title = Ruột gối cao cấp Sông Hồng Premium Comfy 45x65
 url = https://sieuthidemonline.vn/ruot-goi-comfy-45x65-song-hong/
 
 [shopee.vn]
-match = -30.4%%
-title = RUỘT GỐI CAO CẤP KOREA ÉP HƠI, KÍCH THƯỚC 45 ...
-url = https://shopee.vn/RUỘT-GỐI-CAO-CẤP-KOREA-ÉP-HƠI-KÍCH-THƯỚC-45*65-HÀNG-CHÍNH-HÃNG-HÀNG-SALE-GIÁ-CỰC-TỐT.-i.1019436881.25921371472
+match = -69.6%%
+title = Combo 2 ruột gối korea cao cấp ép hơi kích thước 50x70cm
+url = https://shopee.vn/Combo-2-ruột-gối-korea-cao-cấp-ép-hơi-kích-thước-50x70cm-i.135534164.4731748574
 
 [everonvn.com.vn]
 match = -82.6%%
@@ -27,9 +27,9 @@ title = Ruột Gối Chống Ngáy Everon Chính Hãng Hàn Quốc bảng ...
 url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay
 
 [thegioidemviet.vn]
-match = -21.7%%
-title = BẢNG GIÁ RUỘT GỐI MICRO VIỆT Á CHÍNH HÃNG
-url = https://thegioidemviet.vn/ruot-chan-ruot-goi-micro-viet-a-sao-chep/
+match = -39.1%%
+title = BẢNG GIÁ RUỘT GỐI BAMBOO - CHÍNH HÃNG VIỆT Á
+url = https://thegioidemviet.vn/ruot-chan-ruot-goi-viet-a-sao-chep/
 
 [goihuyhoang.com]
 match = -104.3%%
