--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-03 23:52:08
+lastsearch = 2024-08-04 04:56:18
 
 [www.diepxuan.com]
-match = 45.5%%
-title = Thảm giường II 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 180x200
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh ngọc
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -67,8 +67,8 @@ title = Mattress 180x200 GOLD S95 DREAMZONE - JYSK
 url = https://jysk.vn/en-US/spring-mattress-dreamzone-s95-r180xd200xc28cm
 
 [decosy.com]
-match = -50.0%%
-title = Furniture & Decoration - Decosy Vietnam
+match = 4.5%%
+title = Furniture & Decoration
 url = https://decosy.com/vi_VN/shop/category/phong-ngu-giuong-1167
 
 [vn.my-best.com]
