--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-03 23:51:05
+lastsearch = 2024-08-04 04:52:24
 
 [bilystore.vn]
-match = -81.0%%
-title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na14/
+match = -95.2%%
+title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
-match = -109.5%%
-title = Thảm Lông Trải Sàn, thảm trải chân giường, trải chân ghế ...
-url = https://shopee.vn/Thảm-Lông-Trải-Sàn-thảm-trải-chân-giường-trải-chân-ghế-sofa-trang-trí-hàng-loại-1-(-Size-80cmx200cm)-i.120420833.21320198200
+match = -114.3%%
+title = Thảm lông cừu trải giường, thảm nỉ nhung trải giường kích ...
+url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-kích-thước-1m2x1m9-hàng-loại-1-i.267488477.19054543830
 
 [tiki.vn]
 match = -38.1%%
