--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-04 01:20:29
+lastsearch = 2024-08-04 04:57:39
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -37,9 +37,9 @@ title = Tūī
 url = https://davidtrubridge.com/au/lighting/tui
 
 [www.linkedin.com]
-match = -200.0%%
-title = TUI
-url = https://www.linkedin.com/company/tuigroup
+match = -150.0%%
+title = TUI on LinkedIn: #taxibot | 16 comments
+url = https://www.linkedin.com/posts/tuigroup_taxibot-activity-7185656115815174144-FIJx
 
 [www.diepxuan.com]
 match = -133.3%%
