--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-03 23:59:03
+lastsearch = 2024-08-04 04:50:59
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = Bộ Everon Ep1831 - Curtis
 url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -133.3%%
-title = [FREESHIP MAX] Vỏ gối ôm satin cao cấp [Bear Bedding]
-url = https://www.lazada.vn/products/freeship-max-vo-goi-om-satin-cao-cap-bear-bedding-i2125036248.html
+match = -177.8%%
+title = 【Ready】⚡ Vỏ gối nằm 💖45x65💖 vỏ gối bao gối cotton poly đơn ...
+url = https://www.lazada.vn/products/ready-vo-goi-nam-45x65-vo-goi-bao-goi-cotton-poly-don-gian-an-nhu-bedding-i2364912134.html
 
 [www.reddit.com]
 match = -150.0%%
@@ -33,13 +33,13 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 
 [www.diepxuan.com]
 match = -11.1%%
-title = Vỏ gối EPM20065 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
+title = Vỏ gối EPM21063 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-epm21063-45x65.html
 
 [www.everonqb.com]
-match = -111.1%%
-title = Vỏ gối ESM20013 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-esm20013-45x65.html
+match = -100.0%%
+title = Vỏ gối EP1812 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-ep1812-45x65.html
 
 [shopee.vn]
 match = -127.8%%
