CI images update

--- a/images/ruot-goi-ke-korea-45x65/config.ini
+++ b/images/ruot-goi-ke-korea-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 lastopen = 2024-08-02 00:29:53
 
 [search]
-lastsearch = 2024-08-04 04:46:20
+lastsearch = 2024-08-04 05:20:41
 
 [demxanh.com]
-match = -43.5%%
-title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html
+match = -47.8%%
+title = Ruột gối Olympia khuyến mãi giá rẻ nhất thị trường
+url = https://demxanh.com/ruot-goi-olympia.html
 
 [sieuthidemonline.vn]
 match = -17.4%%
@@ -27,9 +27,9 @@ title = Ruột Gối Chống Ngáy Everon Chính Hãng Hàn Quốc bảng ...
 url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay
 
 [thegioidemviet.vn]
-match = -39.1%%
-title = BẢNG GIÁ RUỘT GỐI BAMBOO - CHÍNH HÃNG VIỆT Á
-url = https://thegioidemviet.vn/ruot-chan-ruot-goi-viet-a-sao-chep/
+match = -21.7%%
+title = BẢNG GIÁ RUỘT GỐI MICRO VIỆT Á CHÍNH HÃNG
+url = https://thegioidemviet.vn/ruot-chan-ruot-goi-micro-viet-a-sao-chep/
 
 [goihuyhoang.com]
 match = -104.3%%
