--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-03 20:09:43
+lastsearch = 2024-08-04 05:21:43
 
 [en.wikipedia.org]
 match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Park_Chung_Hee
+title = March First Movement
+url = https://en.wikipedia.org/wiki/March_First_Movement
 
 [www.britannica.com]
 match = 0.0%%
@@ -425,4 +425,9 @@ url = https://twitter.com/bigbadbear_
 match = -108.7%%
 title = South Korea considers giving arms to Ukraine after Russia ...
 url = https://apnews.com/article/north-korea-russia-kim-jong-un-putin-military-assistance-war-d9bb8aee7eb1a692b932337578fb3e30
+
+[www.brookings.edu]
+match = -69.6%%
+title = Lessons from South Korea's approach to tackling ...
+url = https://www.brookings.edu/articles/lessons-from-south-koreas-approach-to-tackling-disinformation/
 
