--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-04 01:33:46
+lastsearch = 2024-08-04 05:24:29
 
 [everon.online]
 match = 19.2%%
@@ -39,12 +39,12 @@ url = https://www.tiktok.com/@60giay.com/video/7398392800531729665
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVXGlCZF&sig=ACfU3U0S-ZF3HvvBZFqYNv0q03N6O5UX8g&hl=en&sa=X&ved=2ahUKEwi_gt35utmHAxWGJEQIHcsDAiQQ6AF6BAgYEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVXHoK2y&sig=ACfU3U2rMDJXX0bCfApByimTQf7ZeyC0hA&hl=en&sa=X&ved=2ahUKEwjhjbrC7tmHAxWNDzQIHWOHEdoQ6AF6BAgbEAM
 
 [everonchinhhang.vn]
-match = -19.2%%
-title = Bộ chăn bốn mùa Chân Trời Xanh - ESM24014 - Everon
-url = https://everonchinhhang.vn/products/bo-chan-bon-mua-chan-troi-xanh-esm24014
+match = -26.9%%
+title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [linhkienthanhcong.com]
 match = -23.1%%
@@ -72,9 +72,9 @@ title = Fuji Master
 url = https://fujimaster.com.vn/
 
 [store.steampowered.com]
-match = -84.6%%
-title = Tiết kiệm đến 50%% khi mua Anno 1602 History Edition trên ...
-url = https://store.steampowered.com/app/2820130/Anno_1602_History_Edition/?l=vietnamese&utm_source=indienova&curator_clanid=9170052
+match = -76.9%%
+title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
+url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=38262110&curator_listid=67239&snr=1_1056_1055_1056
 
 [vi.wikipedia.org]
 match = 3.8%%
@@ -410,4 +410,9 @@ url = https://tayson.binhdinh.gov.vn/vi/about/Lich-su-phat-trien.html
 match = -103.8%%
 title = Vinamilk đầu tư hệ thống năng lượng mặt trời tới tất cả các ...
 url = https://evn.com.vn/d6/news/Vinamilk-dau-tu-he-thong-nang-luong-mat-troi-toi-tat-ca-cac-trang-trai-bo-sua-100-653-54478.aspx
+
+[thuvienhoasen.org]
+match = -53.8%%
+title = Tiếng Vọng Sông Bồ | Trần Kiêm Đoàn - Tuỳ Bút/Ký Sự
+url = https://thuvienhoasen.org/a41504/tieng-vong-song-bo-tran-kiem-doan
 
