--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-03 23:14:36
+lastsearch = 2024-08-04 05:20:20
 
 [hanvico.com.vn]
 match = 28.6%%
-title = Bộ ga chun LIVING - LV62
-url = https://hanvico.com.vn/san-pham/lv62/
+title = Bộ ga chun LIVING - LV52
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv52/
 
 [www.diepxuan.com]
-match = -14.3%%
-title = Bộ chăn ga gối màu xoa tin 14 - Điệp Xuân
+match = -4.8%%
+title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
 url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
 
 [lasantevn.com]
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối Everon Lite EVE14
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
+match = -33.3%%
+title = Bộ ga chun Velina V14 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v14
 
 [changmibedding.com]
 match = -33.3%%
