--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-04 04:47:02
+lastsearch = 2024-08-04 05:27:16
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -17,14 +17,14 @@ title = Bộ ga chun Velina V18 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
-match = -114.3%%
-title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
-url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
+match = -66.7%%
+title = bộ chăn ga gối hè giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ chăn ga gối hè
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Chăn ga gối mã DN18-01 vải MicroSH khuyến mại -50%%
-url = https://changagoidemsonghong.com/chan-ga-goi-micro-dn1801
+match = -14.3%%
+title = Chăn ga gối Home mã H17-048 Sale 30%%
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
 
 [demsonghonghanoi.com]
 match = -14.3%%
