--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-04 01:48:50
+lastsearch = 2024-08-04 05:14:04
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,14 +27,14 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -223.5%%
-title = Translational strategies for neuroprotection in ischemic stroke
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
+match = -200.0%%
+title = Discovery of a novel third-generation EGFR inhibitor and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
 
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWJP0nZa&sig=ACfU3U3M9fcC0-pUN98ssst6nl5HEPkiaA&hl=en&sa=X&ved=2ahUKEwiT8Ivp4diHAxWnHkQIHaSBM1kQ6AF6BAgaEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWKJZo1d&sig=ACfU3U1AMBWDGI7voyVX-HiQoTolEvuQPQ&hl=en&sa=X&ved=2ahUKEwj8jpaY7NmHAxU_GDQIHRREAZgQ6AF6BAgkEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -335,4 +335,9 @@ url = https://phongkhongkhongquan.vn/28375/tieu-doan-can-cu-san-bay-na-san-khac-
 match = 0.0%%
 title = 
 url = https://www.bernama.com/en/news.php?id=2290107
+
+[financialservices.gov.in]
+match = -129.4%%
+title = Okaeri zettai kareshi lyrics to happy [2cEwWJ]
+url = https://financialservices.gov.in/beta/digital_archive/akam-xml-new/screen04.html?video_id=video/Marathi/7&YT=https://xn----24-q4dw1abpaqg5au.xn--p1ai/5647891bsein6fe80j
 
