--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-08-03 22:58:19
+lastsearch = 2024-08-04 05:18:55
 
 [vnexpress.net]
 match = -128.6%%
@@ -12,9 +12,9 @@ title = Du lịch BÀ RỊA VŨNG TÀU 2024: top 18 địa điểm phải trải
 url = https://vnexpress.net/cam-nang-du-lich-ba-ria-vung-tau-4479713.html
 
 [vielimousine.com]
-match = -23.8%%
-title = Review Khu Du Lịch Hồ Mây Park Vũng Tàu
-url = https://vielimousine.com/tin-tuc/ho-may-park-vung-tau.html
+match = -100.0%%
+title = Kinh Nghiệm Tham Quan Và Khám Phá Ngọn Hải Đăng ...
+url = https://vielimousine.com/tin-tuc/ngon-hai-dang-vung-tau.html
 
 [www.youtube.com]
 match = -61.9%%
@@ -352,7 +352,7 @@ title = Lịch Trình Du Lịch Vũng Tàu 3 Ngày 2 Đêm Từ Sài Gòn
 url = https://www.klook.com/vi/blog/kinh-nghiem-du-lich-vung-tau-3-ngay-2-dem/
 
 [www.traveloka.com]
-match = -57.1%%
-title = Kinh nghiệm du lịch biển Long Hải mới nhất 2024
-url = https://www.traveloka.com/vi-vn/explore/destination/du-lich-long-hai-acc/154790
+match = -38.1%%
+title = Cẩm nang du lịch Vũng Tàu từ A – Z năm 2024
+url = https://www.traveloka.com/vi-vn/explore/activities/cam-nang-du-lich-vung-tau-tu-a-z/57902
 
