--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-04 04:29:01
+lastsearch = 2024-08-04 05:16:53
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -667,8 +667,8 @@ title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
 
 [vba.vn]
-match = -37.5%%
-title = THÔNG TIN CÂU LẠC BỘ Saigon Heat
+match = -27.3%%
+title = Saigon Heat
 url = https://vba.vn/clubs/saigon-heat
 
 [hanoionline.vn]
