--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-03 23:35:00
+lastsearch = 2024-08-04 05:13:04
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -957,9 +957,9 @@ title = Men, commit to mentor women
 url = https://leanin.org/mentor-her
 
 [www.mncourts.gov]
-match = 0.0%%
-title = 
-url = https://www.mncourts.gov/Access-Case-Records/MCRO.aspx
+match = -126.7%%
+title = Jury Service | Minnesota Judicial Branch
+url = https://www.mncourts.gov/jurors.aspx
 
 [www.graniteymca.org]
 match = -133.3%%
@@ -1165,4 +1165,14 @@ url = https://www.middlesexcountynj.gov/
 match = 6.7%%
 title = Pace University
 url = https://www.pace.edu/
+
+[www.fda.gov]
+match = -73.3%%
+title = U.S. Food and Drug Administration
+url = https://www.fda.gov/
+
+[www.saisd.net]
+match = 26.7%%
+title = San Antonio ISD
+url = https://www.saisd.net/
 
