--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-03 23:01:26
+lastsearch = 2024-08-04 05:25:13
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgpHDtqb&sig=ACfU3U1p06b2zw3ORIp_Ftr2SdXbhnrFYQ&hl=en&sa=X&ved=2ahUKEwin0pXzmNmHAxUZE0QIHTgICXQQ6AF6BAgYEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgpJGuj9&sig=ACfU3U2sFxh7VZxcK173gz9j6QhUmmq3WQ&hl=en&sa=X&ved=2ahUKEwj70r_X7tmHAxUGITQIHZhmBgEQ6AF6BAgXEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
