--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-08-04 01:30:26
+lastsearch = 2024-08-04 05:16:32
 
 [tuananh.vn]
-match = 12.0%%
-title = Đệm bông ép 3 mảnh Korea Gấm
-url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
+match = 22.2%%
+title = Đệm Korea Gấm Plus
+url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
 match = -48.0%%
