CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-04 03:30:31
+lastsearch = 2024-08-04 05:56:21
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,11 +54,11 @@ url = https://en.wikipedia.org/wiki/Vietnamese_language
 [books.google.com]
 match = -43.5%%
 title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrYh8U1G&sig=ACfU3U35-p99j92Oaq0y9EAnexz04VL9NQ&hl=en&sa=X&ved=2ahUKEwjooN__-tiHAxV7MlkFHflsDg8Q6AF6BAgkEAM
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrZabT3H&sig=ACfU3U21IbsT2a5BkUPV09exXmESu71Q5A&hl=en&sa=X&ved=2ahUKEwiUn_7R9dmHAxVjEFkFHYHoBPEQ6AF6BAgkEAM
 
 [www.travelweekly.com]
-match = -87.0%%
-title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda- Page 10
+match = -56.5%%
+title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda
 url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Hotels-Near-Jade-Emperor-Pagoda-p4247472?s=2+u3NLAzhVE=u&pg=10
 
 [sonoivu.thaibinh.gov.vn]
