--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-08-04 04:59:38
+lastsearch = 2024-08-04 05:46:00
 
 [shopee.vn]
-match = -45.8%%
-title = Chiếu mây điều hòa cao cấp Betlep, an toàn cho sức khỏe
-url = https://shopee.vn/Chiếu-mây-điều-hòa-cao-cấp-Betlep-an-toàn-cho-sức-khỏe-i.494447407.19787544696
+match = -41.7%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.diepxuan.com]
 match = 100.0%%
