--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-04 05:22:02
+lastsearch = 2024-08-04 05:48:48
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = -27.3%%
+title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -42,9 +42,9 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
+match = 36.4%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [www.lazada.vn]
 match = -77.3%%
@@ -72,9 +72,9 @@ title = Thảm lông trải sàn lót sàn phòng khách trải giường phòng
 url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-giường-phòng-ngủ-thảm-lông-trắng-loang-mịn-chụp-ảnh-hình-tròn-vuông-1m6x2m-i.472596491.3194973741
 
 [www.kymdan.com]
-match = -18.2%%
-title = Nệm (mattress) Kymdan Deluxe
-url = https://www.kymdan.com/san-pham/nem-kymdan-deluxe
+match = -68.2%%
+title = Vỏ bọc Kymdan UltimateCare (dùng cho nệm Xếp)
+url = https://www.kymdan.com/san-pham/vo-boc-nem-xep-kymdan-ultimatecare
 
 [noithatkenli.vn]
 match = -27.3%%
@@ -142,7 +142,7 @@ title = 300 mẫu thảm trải sàn đẹp thảm lót sàn mới 2024
 url = https://bearsofa.com/mau-tham-trai-san-dep/
 
 [songhonghanoi.vn]
-match = -68.2%%
-title = Ga gối Sông Hồng Basic cotton BC20028 - Hà Nội
-url = https://songhonghanoi.vn/ga-goi-song-hong-basic-cotton-bc20028.html
+match = -27.3%%
+title = Ga gối Sông Hồng Basic cotton BC20014
+url = https://songhonghanoi.vn/ga-goi-song-hong-basic-cotton-bc20014.html
 
