--- a/images/chieu-cay-ht-18/config.ini
+++ b/images/chieu-cay-ht-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-18.html
 lastopen = 2024-06-09 22:15:47
 
 [search]
-lastsearch = 2024-08-04 03:15:07
+lastsearch = 2024-08-04 05:58:00
 
 [shadow.vn]
 match = -140.0%%
@@ -14,7 +14,7 @@ url = https://shadow.vn/den-pin-chieu-xa-fenix-ht18r
 [chuyentactical.com]
 match = 0.0%%
 title = Đèn Pin Fenix - HT18R
-url = https://chuyentactical.com/den-pin/den-pin-fenix-ht18r/
+url = https://chuyentactical.com/den-pin/den-pin-fenix-ht18r/?srsltid=AfmBOopF8-lx-biiCoM-WtjZlgSzj2X0gr7wne23GPdDuhdu_-i1Insc
 
 [bisu.vn]
 match = -113.3%%
