--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-04 01:48:59
+lastsearch = 2024-08-04 05:58:42
 
 [eva.vn]
 match = -163.2%%
@@ -67,9 +67,9 @@ title = 3 loại cây cảnh bỗng dưng nở hoa được xem là kỳ tích
 url = https://danviet.vn/3-loai-cay-canh-bong-dung-no-hoa-duoc-xem-la-ky-tich-bao-hieu-tien-de-ra-tien-20220720162714148.htm
 
 [www.vinmec.com]
-match = -42.1%%
-title = Cây náng hoa trắng có tác dụng gì?
-url = https://www.vinmec.com/vie/bai-viet/cay-nang-hoa-trang-co-tac-dung-gi-vi
+match = 26.3%%
+title = Công dụng cây bông gạo
+url = https://www.vinmec.com/vie/bai-viet/cong-dung-cay-bong-gao-vi
 
 [www.youtube.com]
 match = -105.3%%
@@ -87,9 +87,9 @@ title = Cây lá bỏng thần kỳ "mọc" ra hoa hồng xanh mướt
 url = https://kenh14.vn/cay-la-bong-than-ky-moc-ra-hoa-hong-xanh-muot-20170424194942725.chn
 
 [saigonhoa.com]
-match = -68.4%%
-title = Mẹo để cây mai chiếu thủy nở rộ vào dịp Tết
-url = https://saigonhoa.com/meo-de-cay-mai-chieu-thuy-no-ro-vao-dip-tet/
+match = -89.5%%
+title = 17 cây bóng mát khuyến khích trồng đường phố
+url = https://saigonhoa.com/17-cay-bong-mat-khuyen-khich-trong-duong-pho/
 
 [nongthonviet.com.vn]
 match = -94.7%%
