--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-16.html
 lastopen = 2024-06-09 22:26:33
 
 [search]
-lastsearch = 2024-08-04 05:29:57
+lastsearch = 2024-08-04 05:55:02
 
 [demxanh.com]
 match = -14.8%%
@@ -32,9 +32,9 @@ title = 5 loại chiếu cực mát lưng cho mùa hè, được ưa chuộng ..
 url = https://www.dienmayxanh.com/kinh-nghiem-hay/5-loai-chieu-nam-mat-lim-lung-cho-mua-he-duoc-ua-1267470
 
 [suongtuyet.com]
-match = -29.6%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 18.5%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [nclvn.com]
 match = -44.4%%
@@ -48,8 +48,8 @@ url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 
 [demviethome.vn]
 match = 14.8%%
-title = Chiếu điều hòa latex C08 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c08/?srsltid=AfmBOooMln6wqyhQtzP6xNG4HCKFdiJVRcGdm83-kv1KnLVoRtrUy55I
+title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
 
 [hc.com.vn]
 match = -22.2%%
