--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-04 04:26:29
+lastsearch = 2024-08-04 05:56:43
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Mai Huyền ❤️FREESHIP ...
 url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-❤️FREESHIP❤️-Chiếu-Nhựa-Hà-Nội-(1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m)-i.126028938.4749254076
 
 [tchome.vn]
-match = 20.0%%
-title = CHIẾU NHỰA HÀ NỘI 1 MÉT 2 - TC-HOME
-url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-1-met-2-sp22544.html
+match = 35.0%%
+title = CHIẾU NHỰA HÀ NỘI 1,8m - TC-HOME
+url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-18m-sp22546.html
 
 [tandaiphong.com.vn]
 match = 46.7%%
@@ -33,8 +33,8 @@ url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói-ở_h
 
 [tiki.vn]
 match = -80.0%%
-title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
+title = Chiếu Nhựa Hà Nội (1,5m , 1,6m , 1m8 x 2m ,1m8x3m , ...
+url = https://tiki.vn/chieu-nhua-freeship-chieu-nhua-ha-noi-1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m-p131589762.html?spid=198258706
 
 [www.sendo.vn]
 match = -35.0%%
@@ -48,8 +48,8 @@ url = https://www.facebook.com/media/set/?set=a.774846209209040.1073741830.76356
 
 [www.diepxuan.com]
 match = 15.0%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [www.lazada.vn]
 match = 10.0%%
@@ -105,4 +105,9 @@ url = https://www.labhanoi.com/pro.asp?pro=3934&khoa-voi-3-chieu-bang-nhua-ptfe.
 match = 82.4%%
 title = Chiếu Nhựa Hà Nội
 url = https://muathongminh.vn/chieu-nhua-ha-noi.html
+
+[cafef.vn]
+match = -105.0%%
+title = Nhựa Hà Nội chào sàn UpCOM ngày 8/9 với giá tham ...
+url = https://cafef.vn/nhua-ha-noi-chao-san-upcom-ngay-8-9-voi-gia-tham-chieu-66000-dong-cp-2017090416340201.chn
 
