--- a/images/nem-sieu-nhe-5f-14/config.ini
+++ b/images/nem-sieu-nhe-5f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-14.html
 lastopen = 2024-06-09 23:19:00
 
 [search]
-lastsearch = 2024-08-04 03:29:48
+lastsearch = 2024-08-04 05:44:36
 
 [tuhung.net]
 match = -116.7%%
@@ -12,9 +12,9 @@ title = Lưu trữ Nệm PE Hàn Quốc dày 3F - Nội Thất Tứ Hưng
 url = https://tuhung.net/danh-muc-san-pham/nem-pe-han-quoc/nem-pe-han-quoc-day-3f/
 
 [shopee.vn]
-match = -155.6%%
-title = nệm cao su non American đầy đủ kích thước. bảo hành 15 ...
-url = https://shopee.vn/nệm-cao-su-non-American-đầy-đủ-kích-thước.-bảo-hành-15-năm-ship-toàn-quốc-i.274096768.24919476500
+match = -100.0%%
+title = Nệm 1m2 - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/nệm/1m2
 
 [congtynemthangloi.com.vn]
 match = -166.7%%
@@ -54,7 +54,7 @@ url = https://sieuthicholon.com/tag/nem-topper-foam-ti/?trang=14
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOooeABFfHL_8MplKWmLMUeiByzcbw9eT0RWBzeCzqxg6MlRrBOCO
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
 match = -77.8%%
