--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-04 04:41:56
+lastsearch = 2024-08-04 05:54:41
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/list/giường xếp
 [sofatoanquoc.com]
 match = 30.0%%
 title = Giường ngủ bọc da mã 15
-url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html?srsltid=AfmBOoqr6OkF0Si43mQeYokXX2sJS69BsgFYX2DQSTr05XWyYDE4nsS3
 
 [noithathoaphat360.com]
 match = -55.0%%
@@ -47,9 +47,9 @@ title = Bộ giường tủ cổ điển nhập khẩu GR B15
 url = https://greenfurni.vn/bo-giuong-tu-co-dien-nhap-khau-gr-b15/
 
 [noithattana.vn]
-match = -140.0%%
-title = Bộ giường ngủ tân cổ điển giá rẻ đẹp, cao cấp nhập khẩu ...
-url = https://noithattana.vn/giuong-tu-tan-co-dien/
+match = -60.0%%
+title = Bộ Giường Tủ Gỗ MDF Hiện Đại Nhập Khẩu TA-D15
+url = https://noithattana.vn/san-pham/bo-giuong-tu-go-mdf-hien-dai-nhap-khau-ta-d11/
 
 [tiki.vn]
 match = -50.0%%
@@ -74,7 +74,7 @@ url = https://nemphuoclong.vn/giuong-ngu-boc-da-cao-cap-hien-dai-lb15
 [noithatcaco.vn]
 match = -115.0%%
 title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOor5VMVlkxPEyCLiZlA3GX3kN7xMT-aTFLbzI6MeXz3yI1h_fBxa
 
 [www.quiphuc.com]
 match = 25.0%%
@@ -99,7 +99,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -75.0%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOoovn9aeGuWIIqJDfh6mGKNzPRl2c8XE7KZ7CQJcJJek_Xem0onm
 
 [noithatgiakhanh.net]
 match = -105.0%%
