--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-08-04 00:36:21
+lastsearch = 2024-08-04 05:54:22
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Where We Fly | Flights with TUI 2024 / ...
-url = https://www.tui.co.uk/flight/where-we-fly
+match = 0.0%%
+title = 
+url = https://www.tui.co.uk/destinations/info/dreamliner
 
 [cruisepanda.com]
 match = -213.3%%
