CI images update

--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-04 05:20:01
+lastsearch = 2024-08-04 06:24:22
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -14,12 +14,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 [www.lazada.vn]
 match = -53.6%%
 title = Khay đá 18 viên nhựa Việt Nhật / Khay Đá Kim Cương 18 ...
-url = https://www.lazada.vn/products/khay-da-18-vien-nhua-viet-nhat-khay-da-kim-cuong-18-vien-khuon-lam-da-i1397366047.html?srsltid=AfmBOoq8E_4kb1RO7xolqkLk91CMcQ35cjB1ytwpAFblVF01ndX05z-s
+url = https://www.lazada.vn/products/khay-da-18-vien-nhua-viet-nhat-khay-da-kim-cuong-18-vien-khuon-lam-da-i1397366047.html
 
 [www.instagram.com]
-match = 11.5%%
-title = Khánh Linh (@t_khanh_linh)
-url = https://www.instagram.com/t_khanh_linh/?hl=en
+match = -10.7%%
+title = Minh Beta (@minhbeta) • Фото и видео в ...
+url = https://www.instagram.com/minhbeta/?locale=ru&hl=am-et
 
 [ninhbinhstone.com]
 match = -25.0%%
@@ -109,7 +109,7 @@ url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual 
 [drhc-cosmetics.com]
 match = -71.4%%
 title = Goat Milk Orange (110g, 3.8oz.) (Skin brightening, Anti- ...
-url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18?srsltid=AfmBOopPAMFZd0pOr6UudMKJp3vikTheYH4WxL-kP9Ju2KDT3ceJ6VvC
+url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
 
 [quangduc.com]
 match = -42.9%%
@@ -177,9 +177,9 @@ title = TP. Đào Viên · XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN - Coda
 url = https://coda.io/@xuatkhaulaodong/xkld-dai-loan/tp-ao-vien-13
 
 [abina.vn]
-match = -57.1%%
-title = Bột làm 1kg sữa chua Hy Lạp vị mật ong manuka Easiyo - Abina
-url = https://abina.vn/sua-chua-hy-lap-mat-ong-manuka-easiyo-manuka-honey/
+match = -75.0%%
+title = Viên uống Xtend-Life NR6: tăng sinh NAD tự nhiên, chống lão ...
+url = https://abina.vn/xtend-life-nr6-tang-sinh-nad-tu-nhien-tang-cuong-tuoi-tho/
 
 [kinhtexaydung.gov.vn]
 match = -21.4%%
