--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-04 05:10:54
+lastsearch = 2024-08-04 06:25:04
 
 [www.everonvn.vn]
 match = -95.2%%
@@ -12,9 +12,9 @@ title = Bảng giá các kích thước ruột gối Everon Standard Soft
 url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-standard-soft.html
 
 [shopee.vn]
-match = -81.0%%
-title = Ruột gối osin bông cứng 45x65. Dành cho người thích ...
-url = https://shopee.vn/Ruột-gối-osin-bông-cứng-45x65.-Dành-cho-người-thích-nằm-gối-cứng-”3-i.435075614.3489785530
+match = -100.0%%
+title = Ruột gối hơi bông gòn cao cấp kháng khuẩn mẫu hoa nhí ...
+url = https://shopee.vn/Ruột-gối-hơi-bông-gòn-cao-cấp-kháng-khuẩn-mẫu-hoa-nhí-kích-thước-45x65cm-i.441837062.20823110424
 
 [www.diepxuan.com]
 match = 4.8%%
