--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-04 05:59:22
+lastsearch = 2024-08-04 06:18:53
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -37.0%%
-title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi?srsltid=AfmBOopJtFxHUYcCkuXtmylMrwISqzvh9wWp9nU3heCvWiz_vxyYWlJw
+match = -59.3%%
+title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
+url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
 
 [elambo.vn]
 match = -3.7%%
@@ -42,9 +42,9 @@ title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/
 
 [demxanh.com]
-match = -44.4%%
-title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
-url = https://demxanh.com/chan-ga-goi-olympia.html?srsltid=AfmBOopD6dufRcR3F_Uqrm1t_Bz-PwoEE3SiEs6a266_pB7SmY-QMpUX
+match = -74.1%%
+title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
+url = https://demxanh.com/cach-lam-phong-ruot-goi.html
 
 [www.thegioididong.com]
 match = -55.6%%
@@ -179,7 +179,7 @@ url = https://baoquangnam.vn/coi-vang-3137201.html
 [www.diepxuan.com]
 match = 51.9%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOoq597MEh0mWmMtkz5Hkbo3K6CeZP2f_p41b2_OYkv2BUI87-VXL
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [demhong.vn]
 match = -22.2%%
@@ -189,7 +189,7 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 [dienmaycholon.com]
 match = -44.4%%
 title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOopCcxSOSEkg3iolVT0wF0tAURWp5Nh6RxeGWZFu123seFdGvoAo
+url = https://dienmaycholon.com/goi-vo-goi-simplehome
 
 [metruyen.me]
 match = 33.3%%
