--- a/images/chieu-nhua-thai-binh-gt-180x300/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x300/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x300.html
 lastopen = 2024-08-01 10:35:37
 
 [search]
-lastsearch = 2024-08-04 05:33:21
+lastsearch = 2024-08-04 06:14:02
 
 [www.diepxuan.com]
-match = 54.8%%
-title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
+match = 38.7%%
+title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
 
 [shopee.vn]
-match = 3.2%%
-title = Chiếu Nhựa Thái Bình-Việt Nam Đa Dạng Kích Cỡ-Mầu Sắc
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Việt-Nam-Đa-Dạng-Kích-Cỡ-Mầu-Sắc-i.674166358.24176394117
+match = 32.3%%
+title = Chiếu Nhựa Gấp Gọn Đủ Kích Cỡ Cao Cấp
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Hàng-Việt-Nam-Chiếu-Nhựa-Gấp-Gọn-Đủ-Kích-Cỡ-Cao-Cấp-i.398388048.13666402755
 
 [m.facebook.com]
 match = 19.4%%
@@ -72,9 +72,9 @@ title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
 url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/
 
 [shopadf.com]
-match = -54.8%%
-title = Bên trong nơi diễn ra sự kiện ra mắt iPhone 8 - Xu Vàng 777
-url = http://shopadf.com/ben-trong-noi-dien-ra-su-kien-ra-mat-iphone-8-67152.html
+match = -51.6%%
+title = Những mẫu máy chiếu dưới 10 triệu đồng đáng mua mùa bóng ...
+url = http://shopadf.com/nhung-mau-may-chieu-duoi-10-trieu-dong-dang-mua-mua-bong-world-cup-133706.html
 
 [www.tles.tyc.edu.tw]
 match = -22.7%%
