--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-04 05:45:39
+lastsearch = 2024-08-04 06:23:19
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -42,9 +42,9 @@ title = Chiếu trúc hạt đen có viền
 url = https://tongkhonem.com/san-pham/chieu-truc-hat-den-co-vien/
 
 [www.sendo.vn]
-match = 0.0%%
-title = Chiếu trúc hạt đen cao cấp không viền 1m2x1m9 [Được ...
-url = https://www.sendo.vn/chieu-truc-hat-den-cao-cap-khong-vien-1m2x1m9-duo-c-kie-m-ha-ng-19203070-117250609.html
+match = -10.7%%
+title = Chiếu trúc đen không viền hàng việt nam cao cấp 1m2x2m ...
+url = https://www.sendo.vn/chieu-truc-den-khong-vien-hang-viet-nam-cao-cap-1m2x2m-duo-c-kie-m-ha-ng-31921335-117250615.html
 
 [chanrathanhthuy.com]
 match = -3.6%%
@@ -92,9 +92,9 @@ title = Tìm hiểu về quy trình để tạo nên sản phẩm chiếu trúc 
 url = https://chieutrucxinh.weebly.com/chia-se/category/mua-chi7871u-truacutec
 
 [h5.lazada.vn]
-match = 42.9%%
-title = Chiếu trúc 1,6*2m hạt nâu không viền
-url = https://h5.lazada.vn/products/chieu-truc-162m-hat-nau-khong-vien-i473062569.html
+match = -21.4%%
+title = chiếu tre 1,4*1,9m hạt vàng không viền hàng Việt Nam ...
+url = https://h5.lazada.vn/products/chieu-truc-chieu-tre-1419m-hat-vang-khong-vien-hang-viet-nam-sieu-re-i277132020.html
 
 [chieutrucchieutre.ete.vn]
 match = 32.1%%
