--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-04 04:25:49
+lastsearch = 2024-08-04 06:24:45
 
 [www.tui.co.uk]
 match = 0.0%%
@@ -147,9 +147,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -216.7%%
-title = TUI AG says will not make offer for TUI Travel
-url = https://www.reuters.com/article/business/tui-ag-says-will-not-make-offer-for-tui-travel-idUSTRE49F1VI/
+match = -325.0%%
+title = Tour giant TUI expects bright summer despite higher prices
+url = https://www.reuters.com/business/retail-consumer/tui-posts-less-than-forecast-q2-loss-winter-bookings-rise-2024-05-15/
 
 [www.mybaggage.com]
 match = -116.7%%
@@ -162,9 +162,9 @@ title = Army Staff Sergeant Visala Tui
 url = https://www.buildinghomesforheroes.org/meet-our-heroes/army-staff-sergeant-visala-tui/
 
 [www.youtube.com]
-match = -316.7%%
-title = 🔴 LIVE: The Legendary Cargolux Retro 747 & More Land at ...
-url = https://www.youtube.com/watch?v=CLfcPppzI-8
+match = -175.0%%
+title = Korean Dham Doi (Tan Tui) Interpretation
+url = https://www.youtube.com/watch?v=9KjmM8FLEqE
 
 [www.thenaturaladventure.com]
 match = -283.3%%
