--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-08-04 04:30:42
+lastsearch = 2024-08-04 06:18:13
 
 [www.diepxuan.com]
 match = -16.7%%
 title = Túi Singapore 150x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-singapore-150x190x09.html
+url = https://www.diepxuan.com/tui-singapore-150x190x09.html?srsltid=AfmBOopfm3Lhuq_xL9L2IhuocCAgScWoc_aoUa4U8HP9i62bScsw8oiT
 
 [www.tui.co.uk]
 match = -58.3%%
